--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -184,6 +184,16 @@
  SQI_flight_north_desc:0 "为躲避南方的混乱，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，只能把靳云鹗松散的管制当作临时的避难所，因此无论谁上台，都必须决定难民的命运。"
  SQI_Rampant_drug_trade:0 "猖獗的毒品贸易"
  SQI_Rampant_drug_trade_desc:0 "狗日的张宗昌抽大烟成瘾，他的那支该死的军队也是一个巨大的毒窝。这给山东的督理靳云鹗带来了无穷的困扰，政府财政在无穷的毒品潮中濒临崩溃"
+ SQI_gea_influence_idea0:0 "德国人的影响力"
+ SQI_gea_influence_idea0_desc:0 "§Y[GER.GetName]对我们的经济有可见的控制！§!"
+ SQI_gea_influence_idea1:0 "德国人的影响力"
+ SQI_gea_influence_idea1_desc:0 "§Y[GER.GetName]对我们的经济有坚实的控制！§!"
+ SQI_gea_influence_idea2:0 "德国人的影响力"
+ SQI_gea_influence_idea2_desc:0 "§O[GER.GetName]对我们的经济有强大的控制！§!"
+ SQI_gea_influence_idea3:0 "德国人的影响力"
+ SQI_gea_influence_idea3_desc:0 "§O[GER.GetName]对我们的经济有紧密的控制！§!"
+ SQI_gea_influence_idea4:0 "德国人的影响力"
+ SQI_gea_influence_idea4_desc:0 "§R[GER.GetName]已经几乎完全控制了我们的经济！§!"
  SQI_Yiguandao_revolt:0 "一贯道暴乱"
  SQI_Yiguandao_revolt_desc:0 "如果天师去世，那么一贯道就会由其副手和次级管理者运营。目前一贯道正让信徒们焚烧财产，并移居到石窟里，以预备大劫的到来。因此我们现在还不能从这批人身上捞到东西。"
  SQI_Peasant_revolt:0 "农民暴乱"
@@ -438,7 +448,7 @@
  SQI_Stealing_Sailors_From_The_Legation_Cities_desc:0 "我们的舰队现在缺人，在这种情况之下，海战的胜败就取决于我们是否能在中立港招到足够的水兵，因此，为了解决这一问题，我们愿意在中国各大港口为我们的舰队征募大量的水兵。"
 
  SQI_ying_xiang:0 "在山东的博弈"
- SQI_ying_xiang_desc:0 "在二张相继去世，鲍里斯·阿年科夫和他的雇佣军们夺取山东的权力之后，柏林、东京、北京都迫切的想要这块区域加入自己的势力圈中。尤其是的北京，孙传芳的死亡与国民党的南部的动乱让他们焦头烂额，如果山东再失陷，那就意味着吴佩孚该收拾铺盖滚蛋了。德国人在青岛有着大片的租界，他们也希望山东的新主人能够多倒向他们。日本人的目的是最单纯的，他们只想要在中国拥有更多的桥头堡，来征服这片土地。\n§g在你夺取北京之前，最好平衡好日、徳、清三方的影响力（也就是民粹、市自、社保的党派支持度不要高于50%）"
+ SQI_ying_xiang_desc:0 "在二张相继去世，鲍里斯·阿年科夫和他的雇佣军们夺取山东的权力之后，柏林、东京、北京都迫切的想要这块区域加入自己的势力圈中。尤其是的北京，孙传芳的死亡与国民党的南部的动乱让他们焦头烂额，如果山东再失陷，那就意味着吴佩孚该收拾铺盖滚蛋了。德国人在青岛有着大片的租界，他们也希望山东的新主人能够多倒向他们。日本人的目的是最单纯的，他们只想要在中国拥有更多的桥头堡，来征服这片土地。\n§g在你夺取北京之前，最好平衡好日、徳、清三方的影响力（也就是民粹、市自、社保的党派支持度不要高于50%）§!"
  SQI_cong_zhi_xi_huo_qu_huo_qi:0 "从[QIE.GetNameWithFlag]获取武器"
  SQI_cong_zhi_xi_huo_qu_huo_qi_desc:0 " "
  SQI_cong_ri_ben_huo_qu_huo_qi:0 "从[JAP.GetNameWithFlag]获取武器"
@@ -450,9 +460,37 @@
  SQI_cong_de_guo_shu_mai_wei_hai_wei:0 "赎买威海卫"
  SQI_cong_de_guo_shu_mai_wei_hai_wei_desc:0 " "
 
+ SQI_GER_yin_xiang_li:0 "德意志的阴翳之下"
+ SQI_GER_yin_xiang_li_desc:0 "自从1898年胶东半岛被清政府租借给德意志之后，德国就不断的对着山东半岛露出獠牙。工业及军事实力迅猛崛起的德意志帝国，对于在开拓殖民地方面同英法列强的巨大差距极不甘心，而占领胶州之后，德国终于在继非洲和大洋洲之后，在亚洲找到了立足之地。德皇威廉二世正式命名胶澳租借地的市区为青岛。柏林方面决心投入巨资将青岛建设成所谓的§g“模范殖民地”§!。而随着第一次世界大战落下帷幕，德意志的殖民地得到广阔提升，而在东亚无论是南京还是北京都要比这个曾经的§g“模范殖民地”§!更有价值，青岛在帝国内部逐渐变得不受宠了起来，除非他们能够更进一步...\n山东的督理[SQI.GetLeader]是个不受北京宠爱的家伙，而山东省最大的城市青岛正掌握在这些谋求得到皇帝恩宠的德国人手里。一方有钱，一方需要钱于是这个诡异的同盟就此达成，德国人想要更进一步的控制整个山东，而[SQI.GetLeader]想要彻底摆脱北京和柏林的约束，他们如同两只恶狼，都迫不及待的想要吃掉对方。\n\n§g[GER.GetNameDefCap]§![GER.GetFlag]目前对山东的财政控制为（§R[?SQI.SQI_gea_influence_variable|0]§!）"
+ SQI_jin_kou_de_guo_wu_qi:0 "进口德国武器"
+ SQI_jin_kou_de_guo_ka_che:0 "进口德国卡车"
+ SQI_jin_kou_de_guo_huo_pao:0 "进口德国火炮"
+ SQI_yao_qing_de_guo_zhuan_jia:0 "邀请德国工业专家"
+
  SQI_di_guo_de_shi_wu:0 "帝国的事务"
  SQI_MON:0 "整合[MON.GetNameWithFlag]"
  SQI_TRM:0 "整合[TRM.GetNameWithFlag]"
+
+ SQI_GER_investment_small_tooltip: "§c德国的控制力§!§Y增长§!§G5%§!"
+ SQI_GER_investment_medium_tooltip: "§c德国的控制力§!§Y增长§!§G10%§!"
+ SQI_GER_investment_large_tooltip: "§c德国的控制力§!§Y增长§!§G15%§!"
+ SQI_GER_investment_giga_tooltip: "§c德国的控制力§!§Y增长§!§G30%§!"
+ SQI_GER_spend_small_tooltip: "§c德国的控制力§!§Y降低§!§G5%§!"
+ SQI_GER_spend_medium_tooltip: "§c德国的控制力§!§Y降低§!§G10%§!"
+ SQI_GER_spend_large_tooltip: "§c德国的控制力§!§Y降低§!§G15%§!"
+ SQI_GER_spend_giga_tooltip: "§c德国的控制力§!§Y降低§!§G30%§!"
+ SQI_GER_eco_invest_small_texticon: "[GER.GetFlag] 5%影响力"
+ SQI_GER_eco_invest_small_texticon_blocked: "[GER.GetFlag] §R5%影响力§!"
+ SQI_GER_eco_invest_medium_texticon: "[GER.GetFlag] 10%影响力"
+ SQI_GER_eco_invest_medium_texticon_blocked: "[GER.GetFlag] §R10%影响力§!"
+ SQI_GER_eco_invest_large_texticon: "[GER.GetFlag] 15%影响力"
+ SQI_GER_eco_invest_large_texticon_blocked: "[GER.GetFlag] §R15%影响力§!"
+ SQI_GER_eco_spend_small_texticon: "[GER.GetFlag] §Y5%影响力§!"
+ SQI_GER_eco_spend_small_texticon_blocked: "[GER.GetFlag] §R5%影响力§!"
+ SQI_GER_eco_spend_medium_texticon: "[GER.GetFlag] §Y10%影响力§!"
+ SQI_GER_eco_spend_medium_texticon_blocked: "[GER.GetFlag] §R10%影响力§!"
+ SQI_GER_eco_spend_large_texticon: "[GER.GetFlag] §Y15%影响力§!"
+ SQI_GER_eco_spend_large_texticon_blocked: "[GER.GetFlag] §R15%影响力§!"
 
 #事件
  shandong.1.t:0 "1936年：山东的转折点"
