--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -184,15 +184,15 @@
  SQI_flight_north_desc:0 "为躲避南方的混乱，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，只能把靳云鹗松散的管制当作临时的避难所，因此无论谁上台，都必须决定难民的命运。"
  SQI_Rampant_drug_trade:0 "猖獗的毒品贸易"
  SQI_Rampant_drug_trade_desc:0 "狗日的张宗昌抽大烟成瘾，他的那支该死的军队也是一个巨大的毒窝。这给山东的督理靳云鹗带来了无穷的困扰，政府财政在无穷的毒品潮中濒临崩溃"
- SQI_gea_influence_idea0:0 "德国人的影响力"
+ SQI_gea_influence_idea0:0 "德国人的影响力：§R微弱§!"
  SQI_gea_influence_idea0_desc:0 "§Y[GER.GetName]对我们的经济有可见的控制！§!"
- SQI_gea_influence_idea1:0 "德国人的影响力"
+ SQI_gea_influence_idea1:0 "德国人的影响力：§R轻微§!"
  SQI_gea_influence_idea1_desc:0 "§Y[GER.GetName]对我们的经济有坚实的控制！§!"
- SQI_gea_influence_idea2:0 "德国人的影响力"
+ SQI_gea_influence_idea2:0 "德国人的影响力：§R中度§!"
  SQI_gea_influence_idea2_desc:0 "§O[GER.GetName]对我们的经济有强大的控制！§!"
- SQI_gea_influence_idea3:0 "德国人的影响力"
+ SQI_gea_influence_idea3:0 "德国人的影响力：§R重度§!"
  SQI_gea_influence_idea3_desc:0 "§O[GER.GetName]对我们的经济有紧密的控制！§!"
- SQI_gea_influence_idea4:0 "德国人的影响力"
+ SQI_gea_influence_idea4:0 "德国人的影响力：§R完全掌控§!"
  SQI_gea_influence_idea4_desc:0 "§R[GER.GetName]已经几乎完全控制了我们的经济！§!"
  SQI_Yiguandao_revolt:0 "一贯道暴乱"
  SQI_Yiguandao_revolt_desc:0 "如果天师去世，那么一贯道就会由其副手和次级管理者运营。目前一贯道正让信徒们焚烧财产，并移居到石窟里，以预备大劫的到来。因此我们现在还不能从这批人身上捞到东西。"
@@ -233,9 +233,13 @@
 
  SQI_jiangsu_shandong_deal_dynamic_modifier:0 "开发江苏"
 
- luda_mining_company:0 "旅大矿业集团"
+ luda_mining_company:0 "鲁大矿业集团"
  seventy_two_cannon_artillery_foundry:0 "七二炮铸造厂"
  jinan_arsenal:0 "济南兵工厂"
+ SQI_si_fang_ji_che:0 "青岛四方机车车辆"
+ SQI_si_fang_ji_che_desc:0 "在德占时期，德国根据殖民地发展需要，大举进行与建港、筑路相配套的工程和重要的市政工程建设。德皇威廉二世决心将青岛建设成所谓的“模范殖民地”，成为德国军队在远东一个牢不可破的桥头堡。因此，德国在1900年到1910年间，在青岛兴建了一批工厂，成为青岛早期工业发展的重要基石。德国在修筑胶济铁路的同时，于1900年10月动工兴建了山东铁路四方总修理厂，属德国德华山东铁路公司下辖机构，总投资158.7万马克，成为继唐山、大连两厂后第三家出现于中国的铁路机车车辆工厂。"
+ SQI_qing_dao_zao_chuan_chang:0 "青岛造船厂"
+ qingdao_dian_deng_company:0 "青岛电灯厂"
 
  SQI_Zheyuan_beat_Zongchang:0 "屈映光上台"
  SQI_Tianran_beat_Zongchang:0 "一贯道夺权"
@@ -380,6 +384,51 @@
  SQI_Recruitung_Military_Experts_Outside_Shandong_desc:0 "在过去的几十年里，山东之所以能够保持自治，靠的就是打破常规，因此我们手里有一系列探索性的军事项目可供发展。"
  SQI_Improving_Our_Technological_Sharing:0 "科研返校"
  SQI_Improving_Our_Technological_Sharing_desc:0 "由于我们的政府缺乏合法性，新一代的官兵得不到机会进入军校深造，我们的行政部门可以招一批青岛和天津的教师，并制定一套军事研究计划。"
+
+ SQI_make_shandong_great:0 "挽救山东经济"
+ SQI_make_shandong_great_desc:0 " "
+ SQI_chu_li_nong_ye_wei_ji:0 "处理农业危机"
+ SQI_chu_li_nong_ye_wei_ji_desc:0 " "
+ SQI_nong_ye_duo_yang_hua:0 "作物多样化"
+ SQI_nong_ye_duo_yang_hua_desc:0 " "
+ SQI_jin_kou_de_guo_fei_liao:0 "进口德国肥料"
+ SQI_jin_kou_de_guo_fei_liao_desc:0 " "
+ SQI_kuo_da_nong_ye_chu_kou:0 "扩大农业出口"
+ SQI_kuo_da_nong_ye_chu_kou_desc:0 " "
+ SQI_nong_ye_bu_tie:0 "农业补贴工业"
+ SQI_nong_ye_bu_tie_desc:0 " "
+ SQI_fang_song_dui_de:0 "请求德国投资"
+ SQI_fang_song_dui_de_desc:0 " "
+ SQI_cheng_ji_de_guo_she_bei:0 "承接德国落后设备"
+ SQI_cheng_ji_de_guo_she_bei_desc:0 " "
+ SQI_jiang_di_gong_chang_men_kan:0 "降低进厂门槛"
+ SQI_jiang_di_gong_chang_men_kan_desc:0 " "
+ SQI_kuo_jian_ji_nan_bing_gong_chang:0 "扩建济南兵工厂"
+ SQI_kuo_jian_ji_nan_bing_gong_chang_desc:0 " "
+ SQI_gan_ru_gong_chang:0 "将农民赶入工厂"
+ SQI_gan_ru_gong_chang_desc:0 " "
+ SQI_jie_chu_ri_ben_ren:0 "接触日本人"
+ SQI_jie_chu_ri_ben_ren_desc:0 " "
+ SQI_wu_qi_zi_ji_zi_zhu:0 "武器自给自足"
+ SQI_wu_qi_zi_ji_zi_zhu_desc:0 " "
+ SQI_shan_xi_gong_ye_hua:0 "山东工业化"
+ SQI_shan_xi_gong_ye_hua_desc:0 " "
+ SQI_lian_tong_si_fang:0 "联通四方"
+ SQI_lian_tong_si_fang_desc:0 " "
+ SQI_sheng_ji_cai_kuang_ye:0 "升级采矿设备"
+ SQI_sheng_ji_cai_kuang_ye_desc:0 " "
+ SQI_kai_chai_mei_kuang:0 "开采淄川炭矿"
+ SQI_kai_chai_mei_kuang_desc:0 " "
+ SQI_kai_chai_jin_ling_tie_kuang:0 "开采金岭铁矿"
+ SQI_kai_chai_jin_ling_tie_kuang_desc:0 " "
+ SQI_kuo_da_yan_tai_gang:0 "扩大烟台港"
+ SQI_kuo_da_yan_tai_gang_desc:0 " "
+ SQI_sheng_chan_xin_nong_ju:0 "生产新农具"
+ SQI_sheng_chan_xin_nong_ju_desc:0 " "
+ SQI_bao_hu_si_ying_qi_ye:0 "保护私营企业"
+ SQI_bao_hu_si_ying_qi_ye_desc:0 " "
+ SQI_yi_qie_wei_le_jin_da_shuai:0 "一切为了靳大帅"
+ SQI_yi_qie_wei_le_jin_da_shuai_desc:0 " "
  SQI_Turning_Our_Attention_To_Industry:0 "半岛工业振兴"
  SQI_Turning_Our_Attention_To_Industry_desc:0 "虽然山东免于八省联合治理，但是这些年还是有一批厂子破产了。行政部门一直致力于勘探这些空地皮，并且试图引进外资来发展经济。"
  SQI_Reopening_The_Barred_Factories:0 "重开工厂"
@@ -450,27 +499,33 @@
  SQI_ying_xiang:0 "在山东的博弈"
  SQI_ying_xiang_desc:0 "在二张相继去世，鲍里斯·阿年科夫和他的雇佣军们夺取山东的权力之后，柏林、东京、北京都迫切的想要这块区域加入自己的势力圈中。尤其是的北京，孙传芳的死亡与国民党的南部的动乱让他们焦头烂额，如果山东再失陷，那就意味着吴佩孚该收拾铺盖滚蛋了。德国人在青岛有着大片的租界，他们也希望山东的新主人能够多倒向他们。日本人的目的是最单纯的，他们只想要在中国拥有更多的桥头堡，来征服这片土地。\n§g在你夺取北京之前，最好平衡好日、徳、清三方的影响力（也就是民粹、市自、社保的党派支持度不要高于50%）§!"
  SQI_cong_zhi_xi_huo_qu_huo_qi:0 "从[QIE.GetNameWithFlag]获取武器"
- SQI_cong_zhi_xi_huo_qu_huo_qi_desc:0 " "
  SQI_cong_ri_ben_huo_qu_huo_qi:0 "从[JAP.GetNameWithFlag]获取武器"
- SQI_cong_ri_ben_huo_qu_huo_qi_desc:0 " "
  SQI_cong_de_guo_huo_qu_huo_qi:0 "从[GER.GetNameWithFlag]获取武器"
- SQI_cong_de_guo_huo_qu_huo_qi_desc:0 " "
  SQI_cong_de_guo_shu_mai_qing_dao:0 "赎买青岛"
- SQI_cong_de_guo_shu_mai_qing_dao_desc:0 " "
  SQI_cong_de_guo_shu_mai_wei_hai_wei:0 "赎买威海卫"
- SQI_cong_de_guo_shu_mai_wei_hai_wei_desc:0 " "
 
  SQI_GER_yin_xiang_li:0 "德意志的阴翳之下"
- SQI_GER_yin_xiang_li_desc:0 "自从1898年胶东半岛被清政府租借给德意志之后，德国就不断的对着山东半岛露出獠牙。工业及军事实力迅猛崛起的德意志帝国，对于在开拓殖民地方面同英法列强的巨大差距极不甘心，而占领胶州之后，德国终于在继非洲和大洋洲之后，在亚洲找到了立足之地。德皇威廉二世正式命名胶澳租借地的市区为青岛。柏林方面决心投入巨资将青岛建设成所谓的§g“模范殖民地”§!。而随着第一次世界大战落下帷幕，德意志的殖民地得到广阔提升，而在东亚无论是南京还是北京都要比这个曾经的§g“模范殖民地”§!更有价值，青岛在帝国内部逐渐变得不受宠了起来，除非他们能够更进一步...\n山东的督理[SQI.GetLeader]是个不受北京宠爱的家伙，而山东省最大的城市青岛正掌握在这些谋求得到皇帝恩宠的德国人手里。一方有钱，一方需要钱于是这个诡异的同盟就此达成，德国人想要更进一步的控制整个山东，而[SQI.GetLeader]想要彻底摆脱北京和柏林的约束，他们如同两只恶狼，都迫不及待的想要吃掉对方。\n\n§g[GER.GetNameDefCap]§![GER.GetFlag]目前对山东的财政控制为（§R[?SQI.SQI_gea_influence_variable|0]§!）"
+ SQI_GER_yin_xiang_li_desc:0 "自从1898年胶东半岛被清政府租借给德意志之后，德国就不断的对着山东半岛露出獠牙。工业及军事实力迅猛崛起的德意志帝国，对于在开拓殖民地方面同英法列强的巨大差距极不甘心，而占领胶州之后，德国终于在继非洲和大洋洲之后，在亚洲找到了立足之地。德皇威廉二世正式命名胶澳租借地的市区为青岛（Tsingtau）。柏林方面决心投入巨资将青岛建设成所谓的§g“模范殖民地”§!。而随着第一次世界大战落下帷幕，德意志的殖民地得到广阔提升，而在东亚无论是南京还是北京都要比这个曾经的§g“模范殖民地”§!更有价值，青岛在帝国内部逐渐变得不受宠了起来，除非他们能够更进一步...\n山东的督理[SQI.GetLeader]是个不受北京宠爱的家伙，而山东省最大的城市青岛正掌握在这些谋求得到皇帝恩宠的德国人手里。一方有钱，一方需要钱，于是这个诡异的同盟就此达成，德国人想要更进一步的控制整个山东，而[SQI.GetLeader]想要彻底摆脱北京和柏林的约束，他们如同两只饿狼，都迫不及待的想要吃掉对方。\n\n§g[GER.GetNameDefCap]§![GER.GetFlag]目前对山东的财政控制为[Getkongzhidu]"
+ SQI_jin_kou_de_guo_shang_ping_mission:0 "德国商品进口"
+ SQI_xiang_de_qi_zheng_shou:0 "对德企加征额外税款"
+ SQI_xiang_de_qi_zheng_shou_desc:0 "尽管我们并没有独立关税权，无法对德国进口的商品征收一分钱，然而这不代表那些德国企业就不需要对我们缴一分钱，即便我们并不能战胜他们，但是我们有一万种方式让我们双方两败俱伤。"
+ SQI_xiang_de_guo_xun_qiu_dai_kuan:0 "向德国寻求贷款"
  SQI_jin_kou_de_guo_wu_qi:0 "进口德国武器"
  SQI_jin_kou_de_guo_ka_che:0 "进口德国卡车"
  SQI_jin_kou_de_guo_huo_pao:0 "进口德国火炮"
  SQI_yao_qing_de_guo_zhuan_jia:0 "邀请德国工业专家"
+ SQI_de_guo_gong_ye_yuan_zu:0 "德国工业援助"
 
  SQI_di_guo_de_shi_wu:0 "帝国的事务"
  SQI_MON:0 "整合[MON.GetNameWithFlag]"
  SQI_TRM:0 "整合[TRM.GetNameWithFlag]"
-
+ 
+ SQIsmall: "§R低（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQIlittle: "§Y低（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQIbig: "§Y中（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQImore: "§G高（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQIhuge: "§G极高（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQI_GER_spend_all_time_tooltip: "§c德国的控制力§!小幅§Y增长§!"
  SQI_GER_investment_small_tooltip: "§c德国的控制力§!§Y增长§!§G5%§!"
  SQI_GER_investment_medium_tooltip: "§c德国的控制力§!§Y增长§!§G10%§!"
  SQI_GER_investment_large_tooltip: "§c德国的控制力§!§Y增长§!§G15%§!"
@@ -496,6 +551,9 @@
  shandong.1.t:0 "1936年：山东的转折点"
  shandong.1.d:0 "山东省最珍贵的部分已经被使馆城市和德国人所瓜分，曾在日德手中反复易手的青岛港，现在已成为德属东亚舰队的重要基地，经济上则被东亚监事会所控制。因此，济南成了山东的权力中心，1925年张宗昌作为革命军领袖来到山东，但很快便把吃喝嫖赌当成了主业，济南的发展就如同狗肉将军一样，肮脏、粗鄙，且千疮百孔。1927年国民党北伐战争的失败，并没有使得直系将手伸入山东，张宗昌保住了他的位置。而等到1928年的又一次直奉战争，虽然那场战争张宗昌并未加入其中。但是被派遣来监督他的靳云鹗却嗅到了机会，一场突如其来的政变将张宗昌赶出了济南，不得不逃入青岛租界避难。即便靳云鹗上台第一件事就是试图挽救山东的经济，从德国人的手中摆脱出来，但是与北京政府基本决裂的现状导致他们几乎得不到资金支持，也因此他只能勉强维持山东的秩序，无法更进一步，除非他同张宗昌一样引入日本人...\n\n而在泰山6600个石阶之上便是一贯道的总部，领袖张天然是个神秘有神圣的人，在得到失意军阀张宗昌的支持后他一直试图颠覆靳云鹗的统治。而到了1936年，山东人已经被贫困逼到了绝境，能够拯救他们的地方要么是济南，要么是泰山。"
  shandong.1.a:0 "爷不管，火车晚点了"
+ SQI.1.t:0 "青岛四十年"
+ SQI.1.d:0 "青岛本是山东半岛东南一个默默无闻的小渔港，直到巨野教案的爆发，胶州湾被德国人占领，由此开启了列强“瓜分中国”风潮，这座渔港正式走上历史舞台。德皇威廉二世在1888年继承王位，他的抱负是：既然先祖威廉大帝的成就在于使德意志帝国成为欧洲强国，那么自己的使命便在于使德意志帝国成为世界强国。山东半岛便成为德意志帝国的重要考虑，而青岛更是势在必得的首要目标。胶州湾便是德意志向世界发出的第一枪。为了建设这个远东的重要基地，德意志帝国一开始就将这个占领地定位为“模范殖民地”，即企图用科学规划、专业性实施和国家监督，建设一个现代的、讲求效益的殖民地，但同时也强调“种族主义”意识形态的贯彻。第一年德国投入500万马克，第二年为850万马克，其后八年(1900～1907)德国平均每年支出一千二三百万马克。这十年间，德国投资颇多，而收入甚少。直到1908年之后，投资效益才逐渐浮现，本国的补助才逐年降低，而地方收益则呈逐年增加之势。\n\n德国人初到胶州湾时，此地人数不过1500人，不及中国的一个村落，十余年之后，青岛却是中国之大都市。当然，德国人并非是来青岛做慈善的，他们的目标从来都不只是青岛，他觊觎的目光其实是射向黄河中下游这个更大的区块。而这一切来得是如此之快，第一次世界大战的胜利为德意志攫取了广袤的非洲殖民地和东南亚殖民地，随后中国国民党的北伐战争又给了德国再次介入中国的借口。在南方扶持齐燮元，在北方扶持满清皇室，尽管青岛仍旧是德国在中国的少数领地，但是其重要性变得却越来越低。曾经的青岛对于每一个前来讨生活的德国人而言是机会的天堂，可是如今，柏林的资金越来越多的流入南京、广州、上海甚至是天津，这个北方曾经的繁华都市正在一天又一天衰落下去，青岛逐渐的变成了德意志官员们的流放地..."
+ SQI.1.a:0 "不，这一切都不会发生！"
  shandong.2.t:0 "路中节到了济南"
  shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
  shandong.2.a:0 "子弹总得有个去处"
