我们命歧简直就是一个左臂大世界

--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -234,6 +234,7 @@
  SQI_jiangsu_shandong_deal_dynamic_modifier:0 "开发江苏"
 
  luda_mining_company:0 "鲁大矿业集团"
+ SQI_schantung_bergbaugesellschaft:0 "山东铁路矿业公司"
  seventy_two_cannon_artillery_foundry:0 "七二炮铸造厂"
  jinan_arsenal:0 "济南兵工厂"
  SQI_si_fang_ji_che:0 "青岛四方机车车辆"
