--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -138,7 +138,7 @@
  SQI_lu_jin: "陆锦"
  POLITICS_Lu_Jin_DESC:0 "§Y陆军将领介绍\n生于：§!§g1879年；大清帝国、直隶省天津市§!\n§Y军旅生涯：§!§g陆锦20岁时即入学北洋武备学堂，是学习日式军事理论的中国学生之一，最终他得以毕业于日本陆军士官学校，于1903年回国并在北洋测绘学堂任教官。之后陆锦开始与隶属于北洋军的直系和旧皖系军阀共事，依靠政治恩庇获得了直隶省和山东省数个高级职位，凭此与地方建立联系。然而，陆锦从不在某个地点彻底扎根，反而总是辗转于不同军阀。1917年，他全力支持张勋复辟满清的尝试，得到了政变参与者的赞扬，并接受了他们授予的旧式军衔。复辟的失败并没有损害陆锦的军事生涯，但他由此陷入了直系军阀错综复杂的纸牌屋中，并深受曹锟和吴佩孚的影响。在1924年冯玉祥于北京政变后，陆锦出逃日本，与旧皖系军阀成员混在一起。等到直系军阀重夺宝座，他已经变得无足轻重。他向直系军阀和复辟的宣统皇帝请愿，希望恢复军队原职。尽管有直系和君主派的背书，请愿仍然被拒绝了。在奉系军阀时，被前旧皖系军阀成员包围的陆锦发觉自己没有出头之日，便辗转于北京、天津和山东，最后与屈映光搭上了伙。\n\n两人很快发现彼此有共同的君主制情结，都对北京政府根深蒂固的腐败问题痛心疾首，还都是浙江人。虽然陆锦出生于天津，老家却在浙江，因此得到了屈映光的照顾。陆锦最后成为了山东禁毒协会和慈善机构的一员，作为一个棋子帮助屈映光组织军事力量，以躲过直系军阀的眼线。§!"
  SQI_liu_zhennian: "刘珍年"
- POLITICS_Liu_Zhennian_DESC:0 "§Y陆军将领介绍\n生于：§!§g1898年；大清帝国、直隶省南宫县§!\n§Y军旅生涯：§!§g刘珍年的军旅生涯始于保定武备学堂，他以优异成绩入学，并在此结识了李景林，后被分配到军官教导团任迫击炮科见习。不久又被选送东北讲武堂学习迫击炮，结业回队任迫击炮连长。1924年的第二次直奉战争中，刘珍年指挥六门迫击炮一举摧毁直军阵地，让他的部下得以打开缺口。经此一役刘珍年声名鹊起，战后他被提拔为营长。\n\n在负伤休养一段时间后，他加入了褚玉璞的第16师，后又担任“模范团”第二营营长。在北伐战争中，他归属于张敬尧等人指挥，在北方战场上经历了多场血战。刘珍年曾批评张敬尧战争中的表现，因此被赋予指挥张敬尧第二师残部的权力。通过一系列激进的措施和严格的训练，刘珍年成功将该师打造成一支令人畏惧的有生力量。北伐结束后，刘珍年与张宗昌派渐行渐远，于是他选择与山东的屈映光结盟。刘珍年对其军界地位的上升野心勃勃，伴随着一场又一场的胜利，他的地位正在稳步攀升。\n\n§Y重要信息：刘珍年的脑盖骨被子弹擦去寸许，那些见过他伤疤的人常因此为他感到惋惜，他却自称这个伤疤是“军人之花”。§!"
+ POLITICS_Liu_Zhennian_DESC:0 "§Y陆军将领介绍\n生于：§!§g1898年；大清帝国、直隶省南宫县§!\n§Y军旅生涯：§!§g刘珍年的军旅生涯始于保定武备学堂，他以优异成绩入学，并在此结识了李景林，后被分配到军官教导团任迫击炮科见习。不久又被选送东北讲武堂学习迫击炮，结业回队任迫击炮连长。1924年的第二次直奉战争中，刘珍年指挥六门迫击炮一举摧毁直军阵地，让他的部下得以打开缺口。经此一役刘珍年声名鹊起，战后他被提拔为营长。\n\n在负伤休养一段时间后，他加入了褚玉璞的第16师，后又担任“模范团”第二营营长。在北伐战争中，他归属于张敬尧等人指挥，在北方战场上经历了多场血战。刘珍年曾批评张敬尧战争中的表现，因此被赋予指挥张敬尧第二师残部的权力。通过一系列激进的措施和严格的训练，刘珍年成功将该师打造成一支令人畏惧的有生力量。北伐结束后，刘珍年与张宗昌派渐行渐远，于是他选择与山东的屈映光结盟。刘珍年对其军界地位的上升野心勃勃，伴随着一场又一场的胜利，他的地位正在稳步攀升。\n\n§Y重要信息：刘珍年的脑盖骨被子弹擦去寸许，那些见过他伤疤的人常因此为他感到惋惜，他却自称这个伤疤是“军人之花”。由于他对于胶东的控制，在山东他也被称为“胶东王”。§!"
  SQI_chu_yupu: "褚玉璞"
  POLITICS_Chu_Yupu_DESC:0 "§Y陆军将领介绍\n生于：§!§g1887年；大清帝国、山东省汶上县§!\n§Y军旅生涯：§!§g褚玉璞出身破落地主之家，其父游手好闲，至于家道中落。他曾两次投考保定军校均未被录取，最终成为了横行地方的著名匪首，这样的结果并不出乎意料。\n\n褚玉璞因未能如愿步入军旅生涯而心灰意冷，遂怒而投奔绿林，纠集一众恶徒，以打家劫舍为生。相传，褚玉璞最初的匪徒班底来自一位土匪首领的队伍，有一年，他率领一批人救出了清朝官府关押在监狱的这位首领。到了1913年，褚玉璞匪帮被收编为张宗昌的麾下，自此，褚玉璞与张宗昌建起长期的良好合作关系。褚玉璞意外踏入军旅生涯，并在张宗昌的队伍里逐步晋升，他追随张宗昌投奔奉系军阀，跟随他们转战各地。后来张宗昌在山东的势力日益稳固，褚玉璞因为“功劳最大”，升任军长并主管军需。\n\n但也正因如此，在张宗昌被赶下台后，褚玉璞也同样遭到了打击，虽然新督理靳云鹗对他网开一面但是他在军中已毫无影响力§!"
  SQI_jin_yune: "靳云鹗"
@@ -387,7 +387,7 @@
  SQI_Improving_Our_Technological_Sharing_desc:0 "由于我们的政府缺乏合法性，新一代的官兵得不到机会进入军校深造，我们的行政部门可以招一批青岛和天津的教师，并制定一套军事研究计划。"
 
  SQI_make_shandong_great:0 "挽救山东经济"
- SQI_make_shandong_great_desc:0 " "
+ SQI_make_shandong_great_desc:0 "欧战期间，列强忙于互相开战没有余力维持对华经济入侵。在这段时间里民族工业有了飞速发展，在山东最庞大的民族企业自然是苗氏工商业他们依靠垄断广州、上海对华北地区的贸易权发家，从创立成丰面粉厂开始逐渐走上了兴办实业的道路，并在欧战期间不断扩大产业，新办成通纱厂、成大纱厂等等。然而欧战的结束列强入侵恢复，以及《北京条约》的签订，再加上企业自身经营问题，山东的经济就像苗氏工商业一样开始走上下坡路。"
  SQI_chu_li_nong_ye_wei_ji:0 "处理农业危机"
  SQI_chu_li_nong_ye_wei_ji_desc:0 " "
  SQI_nong_ye_duo_yang_hua:0 "作物多样化"
@@ -550,7 +550,7 @@
 
 #事件
  shandong.1.t:0 "1936年：山东的转折点"
- shandong.1.d:0 "山东省最珍贵的部分已经被使馆城市和德国人所瓜分，曾在日德手中反复易手的青岛港，现在已成为德属东亚舰队的重要基地，经济上则被东亚监事会所控制。因此，济南成了山东的权力中心，1925年张宗昌作为革命军领袖来到山东，但很快便把吃喝嫖赌当成了主业，济南的发展就如同狗肉将军一样，肮脏、粗鄙，且千疮百孔。1927年国民党北伐战争的失败，并没有使得直系将手伸入山东，张宗昌保住了他的位置。而等到1928年的又一次直奉战争，虽然那场战争张宗昌并未加入其中。但是被派遣来监督他的靳云鹗却嗅到了机会，一场突如其来的政变将张宗昌赶出了济南，不得不逃入青岛租界避难。即便靳云鹗上台第一件事就是试图挽救山东的经济，从德国人的手中摆脱出来，但是与北京政府基本决裂的现状导致他们几乎得不到资金支持，也因此他只能勉强维持山东的秩序，无法更进一步，除非他同张宗昌一样引入日本人...\n\n而在泰山6600个石阶之上便是一贯道的总部，领袖张天然是个神秘有神圣的人，在得到失意军阀张宗昌的支持后他一直试图颠覆靳云鹗的统治。而到了1936年，山东人已经被贫困逼到了绝境，能够拯救他们的地方要么是济南，要么是泰山。"
+ shandong.1.d:0 "山东是一个特殊的省份，这里是袁世凯的发祥地，这里也是儒家重镇，无数次的教案、青岛的失陷、德日的残暴行径，义和团的余温在齐鲁大地上从来没有熄灭过，对外国人的仇恨埋藏在每一个爱国山东人的心底。德国人的影响也不止于此，威廉二世那“模范殖民地”的构思为青岛带来了最先进的工业，这也促使了身处山东的军阀或多或少对培植产业、借用外债、控制财政表现出浓厚的兴趣，尽管山东依旧是一个田赋占收入百分之六十以上农业省，但是工业基础丝毫不弱于那些南方省份。但也同样是因为德国人的存在，山东的一切经济运作都离不开他们的身影，哪怕是欧战期间德国人不得不离开，日本人也很快补上了这个缺口，山东的工业从来不为山东人牟利。\n\n1926年，国民党的北伐，德国人的干涉更是加重了这一点，在无能的张宗昌统治下山东几乎快要成为德国人的附属。但是1928年，靳云鹗的到来扭转了这一点，尽管比起张宗昌，靳云鹗不仅没有北京的宠爱甚至还失去了奉天的支持。但是靳云鹗从来都不是张宗昌那个只知道抽大烟、嫖娼赌博的土匪，他继续对德国人示好，也在背后利用民族情绪煽动着对山东民族工业的支持。他在这条钢丝绳上左右摇晃但又稳稳当当，然后命运向他开了一个玩笑...在他为民族主义煽风点火的同时，另一个人却收获了更大的果实。那就是在泰山6600阶梯之上，那个自封为一贯道第十八代祖师的张天然。被靳云鹗赶下去的张宗昌也跑到了泰山之上，宣布自己皈依一贯道，更何况北京从来没有放弃过在山东换上一个更加稳妥的人..."
  shandong.1.a:0 "爷不管，火车晚点了"
  SQI.1.t:0 "青岛四十年"
  SQI.1.d:0 "青岛本是山东半岛东南一个默默无闻的小渔港，直到巨野教案的爆发，胶州湾被德国人占领，由此开启了列强“瓜分中国”风潮，这座渔港正式走上历史舞台。德皇威廉二世在1888年继承王位，他的抱负是：既然先祖威廉大帝的成就在于使德意志帝国成为欧洲强国，那么自己的使命便在于使德意志帝国成为世界强国。山东半岛便成为德意志帝国的重要考虑，而青岛更是势在必得的首要目标。胶州湾便是德意志向世界发出的第一枪。为了建设这个远东的重要基地，德意志帝国一开始就将这个占领地定位为“模范殖民地”，即企图用科学规划、专业性实施和国家监督，建设一个现代的、讲求效益的殖民地，但同时也强调“种族主义”意识形态的贯彻。第一年德国投入500万马克，第二年为850万马克，其后八年(1900～1907)德国平均每年支出一千二三百万马克。这十年间，德国投资颇多，而收入甚少。直到1908年之后，投资效益才逐渐浮现，本国的补助才逐年降低，而地方收益则呈逐年增加之势。\n\n德国人初到胶州湾时，此地人数不过1500人，不及中国的一个村落，十余年之后，青岛却是中国之大都市。当然，德国人并非是来青岛做慈善的，他们的目标从来都不只是青岛，他觊觎的目光其实是射向黄河中下游这个更大的区块。而这一切来得是如此之快，第一次世界大战的胜利为德意志攫取了广袤的非洲殖民地和东南亚殖民地，随后中国国民党的北伐战争又给了德国再次介入中国的借口。在南方扶持齐燮元，在北方扶持满清皇室，尽管青岛仍旧是德国在中国的少数领地，但是其重要性变得却越来越低。曾经的青岛对于每一个前来讨生活的德国人而言是机会的天堂，可是如今，柏林的资金越来越多的流入南京、广州、上海甚至是天津，这个北方曾经的繁华都市正在一天又一天衰落下去，青岛逐渐的变成了德意志官员们的流放地..."
