--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -4,11 +4,6 @@
  SHC_ADJ: "上海特别市"
  SHC_DEF: "上海特别市"
 
- SHC_guidesnum:0 "§C上海§!有§G2§!条路线指南。"
- guides.1003.t:0 "上海特别市指南"
- guides.1003.d:0 "问：黑社会/何东/天主教教会/警察/沪民？\n\n答：让使馆城市破产，然后在上海火并的事件中选择你想要玩的势力获胜。\n\n问：总工会/左翼作家联盟/流亡俄共？\n\n答：1、在黑色星期一中，不要对工人罢工妥协，然后让总工会/左联起义成功。2.让使馆城市破产，然后在上海火并的事件中选择总工会获胜。在接下来的选举事件中选你想玩的那个。"
- guides.1003.a:0 "帅到"
-
  shanghai_gang_victory:0 "§P最终黑帮胜利了§!"
  zong_gong_hui_victory:0 "§R上海总工会胜利了§!"
  zi_ben_jia_victory:0 "§Y何东的雇佣兵占据了胜利§!"
@@ -518,7 +513,7 @@
  lecgong.17.b:0 "女权斗士，上海革命先锋向警予"
  lecgong.17.c:0 "孙中山革命民族主义的传承人赵世炎"
  lecgong.17.e:0 "文学大师茅盾"
- lecgong.17.f:0 "报业领袖、副刊大王孙伏园"
+ lecgong.17.f:0 "鲁迅先生的挚友，左联元老柔石"
  lecgong.17.g:0 "看看别的候选人"
  lecgong.18.a:0 "回族社会主义运动家马三立"
  lecgong.18.b:0 "看看别的候选人"
