--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -590,3 +590,7 @@
  guides.1002.d:0 "问：军政府/文官政府？\n\n答：首先在统一前让新桂系上台，然后完成国策“宣布召开国民党全国代表大会”，在“大会上的争吵”事件中如果后续想玩军政府就选站在总司令一边，想玩文官政府就选站在行政院一边，然后打赢政治擂台即可解锁后续国策。\n\n问：胡汉民/居正/孙科/张群/蒋经国/滕杰/李石曾/严家淦？\n\n答：让文官政府打赢政治擂台，然后大选中选你想玩的那个。\n\n问：白崇禧/蒋经国/家独李宗仁？\n\n答：让军政府打赢政治擂台，然后在疲倦的总司令中选择不让李宗仁退休即可解锁家独路线。选择退休后续事件中就可以选择白崇禧或蒋经国上台。\n\n问：陈果夫/蒋纬国/宋子文？\n\n答：让蒋经国上台，在完成他的最后一个国策后选择不再继任，同时在安抚军队事件中选择盯紧他们，之后就可以选你想玩的那个上台。反之白崇禧就会政变。"
  guides.1002.a:0 "返回"
  guides.1002.b:0 "帅到"
+ SHC_guidesnum:0 "§C上海§!有§G2§!条路线指南。"
+ guides.1003.t:0 "上海特别市指南"
+ guides.1003.d:0 "问：黑社会/何东/天主教教会/警察/沪民？\n\n答：让使馆城市破产，然后在上海火并的事件中选择你想要玩的势力获胜。\n\n问：总工会/左翼作家联盟/流亡俄共？\n\n答：1、在黑色星期一中，不要对工人罢工妥协，然后让总工会/左联起义成功。2.让使馆城市破产，然后在上海火并的事件中选择总工会获胜。在接下来的选举事件中选你想玩的那个。"
+ guides.1003.a:0 "帅到"
