--- a/localisation/ideologies_l_simp_chinese.yml
+++ b/localisation/ideologies_l_simp_chinese.yml
@@ -4,6 +4,8 @@
  jun_zheng_ji_quan_subtype:0 "军政极权主义"
  jun_zheng_ji_quan_subtype_desc:0 "§Y军政极权主义§!\n\n军政极权主义是极权宪章的变体，军政极权主义认为民主只会带来争吵和低效，让人民沉浸在妥协的幻想中却什么都得不到，最终成为少数人的傀儡。只有暴力的有组织的集体行动才能够让人民获取自己想要的东西，获得真正的自由，而这种有组织的集体行动的最高境界是军队。因此，军政极权主义希望把社会主义国家变成一个军队，所有人都像军人一样听从领袖的号令进行整齐划一地行动。在军政极权主义国家中，社会将会高度军事化，军人将会被尊崇，经济、政治和社会活动都将像作战一样被上级一层层地指挥。"
 
+ radsoc_lu_xun_thought_subtype:0 "鲁迅思想"
+ radsoc_lu_xun_thought_subtype_desc:0 "§Y鲁迅思想§!\n\n鲁迅思想是鲁迅先生在一生中所形成的思想体系，他深受中国传统文化与欧洲自由主义、无政府个人主义与社会主义思潮的影响，其核心是“立人”。鲁迅认为，中国要实现真正的进步，首先要造就觉醒的人，即具有独立思考能力、批判精神和勇于担当精神的人。而不是一味的采取行动或是无头脑的革命，他认为在政治革命之前先要进行文化革命。此外鲁迅思想还包括其他内容，如反帝反封建，直接民主，文化批判精神和个性解放等内容"
  mao_ze_dong_thought_subtype:0 "毛泽东思想"
  mao_ze_dong_thought_subtype_desc:0 "§Y毛泽东思想§!\n\n毛泽东思想指的是湖南左翼革命家和教育家毛泽东的一系列思想，其受到了布尔什维主义、无政府主义、工团主义、三民主义甚至俄罗斯民粹主义等一系列思想的影响。毛泽东认为党的作用就是教员，教员不等于“皇帝”、“领袖”和救世主，在教员教会学生知识和自己学习之后就不再需要教员了。毛泽东认为，教员和党一样，不能完全地包办代替学生，抹杀学生的思想，而是应该鼓励学生自己探索自己学习，为其学会自己学习和自由发展提供一个好的环境，所以毛鼓励劳动群众用运动民主等手段逐步学习自己管理自己。同时，毛泽东坚决地支持农民，他认为农民占中国革命的重要组成部分，也具有巨大的先进性，可以建立起来农业社会化，正因如此，毛泽东坚决反对工农剪刀差，将其视作对农民的剥削。毛泽东思想还强调建立全新的教育体系，让学生在劳动实践中验证理论，让工农学习理论，从而逐渐消灭脑力劳动和体力劳动的分界线，并且促进学生自由发展。"
  radsoc_datong_shu_thought_subtype:0 "大同书思想"
