--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -1375,33 +1375,33 @@
 
  #傅作义
  SHX_shao_zhuang_pai_shang_tai:0 "少壮派掌控省政府"
- SHX_shao_zhuang_pai_shang_tai_desc:0 " "
+ SHX_shao_zhuang_pai_shang_tai_desc:0 "随着阎冯二人互相争夺权力的失败后，傅作义和他的晋绥军少壮派在省内的权力真空中夺取了省政府的领导权。随着少壮派控制了山西省政府，也开始让省内外的各界人士为此而担心省政府是否会激进化。但傅作义虽然是较为激进的少壮派，他却为了山西的未来来去实施一些有限的改革。"
  SHX_geng_wen_he_de_zhen_fu:0 "更温和的阎锡山思想"
- SHX_geng_wen_he_de_zhen_fu_desc:0 " "
+ SHX_geng_wen_he_de_zhen_fu_desc:0 "随着傅作义接过了山西省政府的领导权，人们对山西的未来开始了新的憧憬。傅作义出自于阎锡山的晋绥军门下且意识形态也与阎锡山类似，但他又没有阎锡山那么强硬且更倾向于改革派。而人们也在想傅作义接管省政府后，必然将对阎锡山思想做出温和化的改革。"
  SHX_min_zhu_xuan_yan:0 "军政分离"
- SHX_min_zhu_xuan_yan_desc:0 " "
+ SHX_min_zhu_xuan_yan_desc:0 "傅作义执掌山西，有不少有心人士发觉傅作义会展开有限度的改革。其中这次改革的第一项内容就是军政分离，在之前的山西政局中有很长一段时间都是军政合一的。伴随着这一次的改革，山西省内的各支军队将会不在干政。"
  SHX_you_xian_zhi_you_hua:0 "有限自由化"
- SHX_you_xian_zhi_you_hua_desc:0 " "
+ SHX_you_xian_zhi_you_hua_desc:0 "随着改革的陆续展开，另一项重要的改革也将开始实行。长久以来山西一直都处在较为严紧的管控之中，因此傅作义决定在省内实行有一定限制的自由化。虽然这一次的改革开始尝试自由化，但对于山西来说也是一个相当好的发展机遇。"
  SHX_you_xian_si_you_hua:0 "部分私有化"
- SHX_you_xian_si_you_hua_desc:0 " "
+ SHX_you_xian_si_you_hua_desc:0 "在过去这多年来山西一直实行的是一种较为独特的国家资本主义经济体制，除接近半数的国有企业外还有另外近半数企业为公私合营，私营企业几乎没有生存的空间。在这次改革中傅作义决定在部分非关键部门的企业中实行私有化，通过这次的部分私有化改革能缓解省政府的部分赤字以及亏损。"
  SHX_si_you_jiao_yu:0 "扩建乡村学校"
- SHX_si_you_jiao_yu_desc:0 " "
+ SHX_si_you_jiao_yu_desc:0 "随着改革的不断深入，教育现代化也成了这次改革的一个新的重点。尽管在之前赵戴文省长在任时期就已经对乡村教育进行过改革，但成效非常的不明显。所以傅作义省长一上来刘宣布要扩建乡村学校并对乡村教育实行现代化改革，并且将会让乡村的教育系统更加的现代化。"
  SHX_tui_dong_yi_yuan_zhi_xuan:0 "推动百姓监督"
- SHX_tui_dong_yi_yuan_zhi_xuan_desc:0 " "
+ SHX_tui_dong_yi_yuan_zhi_xuan_desc:0 "随着改革的不断深入，在执行中开始出现了部分不作为的行为。傅作义为了能够让改革成功执行且没有不作为行为发生，决定推行让百姓来监督官员。通过推动百姓监督官员这一行动，可以让官员减少不作为行为来确保改革的成功。"
  SHX_chong_zu_shang_hui:0 "重组商会"
- SHX_chong_zu_shang_hui_desc:0 " "
+ SHX_chong_zu_shang_hui_desc:0 "改革在不断渐进，一些影响改革的事情和部门也在不断的被改组。在这次的改革与部门重组中，被亲日势力以及亲协约势力占据的太原商会也将被重组。在这次改组后，太原商会将会以更新的姿态来服务全省人民。随着商会的重组，再山西的境外势力代理人也将不复存在。"
  SHX_min_zhu_sheng_fu:0 "人民的省府"
- SHX_min_zhu_sheng_fu_desc:0 " "
+ SHX_min_zhu_sheng_fu_desc:0 "随着改革的不断进行，省政府也在不断地进化。从之前的的军政合一且不作为到现在的改革后充满了活力的省府有着惊人的变化，而改革后的省政府也不亏被成为人民的省府。随着山西的不断发展，省政府在以后会进行越来越多的改革来为人民服务。"
  SHX_hun_he_xian_dai_hua:0 "温和工业化"
- SHX_hun_he_xian_dai_hua_desc:0 " "
+ SHX_hun_he_xian_dai_hua_desc:0 "随着傅作义一系列改革的进一步推进，工业化则成为了这一步改革的重中之重。虽然山西在北伐时期以及其后的的十年间工业发展突飞猛进，但却出现了严重的不均衡。这也是傅作义这次工业改革的原因，傅作义通过更温和的工业化以及更加均衡的工业规划以缓解轻重工业之间的不平衡。通过这份工业发展计划山西的工业水平会更上一层楼。"
  SHX_ru_xue_xian_dai_hua:0 "儒学现代化"
- SHX_ru_xue_xian_dai_hua_desc:0 " "
+ SHX_ru_xue_xian_dai_hua_desc:0 "农业和农村的发展一直在山西都是特别重要的一环，而如今改革的春风也吹到了农业和农村方面。为了推动农业和农村的现代化，傅作义特地为此确立了农村第一位的口号以配合这一次的农业农村改革。经过了不懈的努力，农业和农村改革取得了非常大的进展。"
  SHX_nong_cun_di_yi_wei:0 "农村第一位"
- SHX_nong_cun_di_yi_wei_desc:0 " "
+ SHX_nong_cun_di_yi_wei_desc:0 "傅作义和阎锡山一样都是儒家学说德推崇者，对比更强硬且更拘泥于传统的阎锡山来说傅作义的儒学无疑是进步的和现代化的。随着改革儒学的命令下达后，全省各学校开始设计现代化传统文学传统文化并恢复了儒学的教学。这次改革虽然被传统儒学学者反对并受到了一定程度的批评，但山西省则从此成为了新儒学学者眼中的示范省。"
  SHX_cha_feng_xie_jiao:0 "查封邪教"
- SHX_cha_feng_xie_jiao_desc:0 " "
+ SHX_cha_feng_xie_jiao_desc:0 "随着改革的越来越深入，一些歪风邪道也就是邪教也开始在省内逐渐传播开来。尤其是以一贯道和三期普渡为首的邪教害人不浅，所以傅作义省长决定查封这些歪门邪道的邪教以防止他们搞乱省里的群众们。"
  SHX_shan_xi_ren_de_shan_xi:0 "山西人的山西"
- SHX_shan_xi_ren_de_shan_xi_desc:0 " "
+ SHX_shan_xi_ren_de_shan_xi_desc:0 "在傅作义和他的少壮派晋绥军逐步地改革之下，山西的各项发展也越来越好。这次改革不仅解决了不少之前存在很久的老问题，还顺带解决了在各级官场上存在已久的官僚主义气息以及不作为行为。这次的改革也算是做到了山西人的山西这一政治口号。"
 
 #事件
  shx.0.t:0 "晋系军阀"
