--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -181,7 +181,12 @@
  SQI_honored_master:0 "上师"
  SQI_honored_master_desc:0 "在泰山之巅，张天然成功让臭名昭著的张宗昌皈依于一贯道，于是乎，世界的目光开始远离腐败的济南，而转到张天然一人身上。上师外露谦和，然内心狡诈。他的影响力已经跨越泰山，在山东半岛蔓延开来。"
  SQI_flight_north:0 "飘向北方"
- SQI_flight_north_desc:0 "为躲避南方的混乱，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，只能把靳云鹗松散的管制当作临时的避难所，因此无论谁上台，都必须决定难民的命运。"
+ SQI_flight_north_desc:0 "为躲避南方的混乱，从前山东人为主的闯关东，却反过来变成了流民们逃难山东，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，仅仅是将山东当作逃难的一个落脚点。而流民的涌入最直观的体现便是粮食危机的加剧。人均拥有的耕地再下一个台阶，山东地区的粮食危机以及到了无法忽视的地步。1935年的黄河决堤更是令本就饥饿的山东雪上加霜。"
+ SQI_liang_shi_wei_ji_jia_ju:0 "粮食危机"
+ SQI_liang_shi_wei_ji_jia_ju_desc:0 "为躲避南方的混乱，从前山东人为主的闯关东，却反过来变成了流民们逃难山东，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，仅仅是将山东当作逃难的一个落脚点。而流民的涌入最直观的体现便是粮食危机的加剧。人均拥有的耕地再下一个台阶，山东地区的粮食危机以及到了无法忽视的地步。1935年的黄河决堤更是令本就饥饿的山东雪上加霜。\n\n农夫苦农夫苦，锄禾日当午，背赤紫汗滴禾下土，终日劳作不息至。农夫苦农夫苦，天旱地又枯釜中无粒粟，儿女牵衣泪如雨。农夫苦农夫苦，吏催租收成不足，无钱付，只得咬牙切齿售儿女。"
+ SQI_liang_shi_wei_ji_jia_juA:0 "赈济灾民"
+ SQI_liang_shi_wei_ji_jia_juA_desc:0 "为躲避南方的混乱，从前山东人为主的闯关东，却反过来变成了流民们逃难山东，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，仅仅是将山东当作逃难的一个落脚点。而流民的涌入最直观的体现便是粮食危机的加剧。人均拥有的耕地再下一个台阶，山东地区的粮食危机以及到了无法忽视的地步。1935年的黄河决堤更是令本就饥饿的山东雪上加霜。\n\n农夫苦农夫苦，锄禾日当午，背赤紫汗滴禾下土，终日劳作不息至。农夫苦农夫苦，天旱地又枯釜中无粒粟，儿女牵衣泪如雨。农夫苦农夫苦，吏催租收成不足，无钱付，只得咬牙切齿售儿女。"
+ SQI_liang_shi_wei_ji_jia_juB:0 "稳固的粮食安全"
  SQI_Rampant_drug_trade:0 "猖獗的毒品贸易"
  SQI_Rampant_drug_trade_desc:0 "狗日的张宗昌抽大烟成瘾，他的那支该死的军队也是一个巨大的毒窝。这给山东的督理靳云鹗带来了无穷的困扰，政府财政在无穷的毒品潮中濒临崩溃"
  SQI_gea_influence_idea0:0 "德国人的影响力：§R微弱§!"
@@ -194,6 +199,8 @@
  SQI_gea_influence_idea3_desc:0 "§O[GER.GetName]对我们的经济有紧密的控制！§!"
  SQI_gea_influence_idea4:0 "德国人的影响力：§R完全掌控§!"
  SQI_gea_influence_idea4_desc:0 "§R[GER.GetName]已经几乎完全控制了我们的经济！§!"
+ SQI_reynaud_economy:0 "保护民族工业"
+ SQI_reynaud_economy_desc:0 "这是我们经济的基础，也是我们财产的保障，他们的事情就是我们的事情。"
  SQI_Yiguandao_revolt:0 "一贯道暴乱"
  SQI_Yiguandao_revolt_desc:0 "如果天师去世，那么一贯道就会由其副手和次级管理者运营。目前一贯道正让信徒们焚烧财产，并移居到石窟里，以预备大劫的到来。因此我们现在还不能从这批人身上捞到东西。"
  SQI_Peasant_revolt:0 "农民暴乱"
@@ -231,6 +238,8 @@
  SQI_building_ships_faster:0 "专注船舰建设"
  SQI_building_ships_faster_desc:0 "通过把资源集中在海军上，我们可以打造一支自己的海军力量。"
 
+ SQI_zi_yuan_zhong_zheng_modifier:0 "资源重镇"
+ SQI_yellow_river_strikes_modifier:0 "黄河决堤"
  SQI_jiangsu_shandong_deal_dynamic_modifier:0 "开发江苏"
 
  luda_mining_company:0 "鲁大矿业集团"
@@ -242,6 +251,10 @@
  SQI_qing_dao_zao_chuan_chang:0 "青岛造船厂"
  qingdao_dian_deng_company:0 "青岛电灯厂"
 
+ SQItianran:0 "张天师"
+ SQIbaieren:0 "鲍里斯"
+ SQIjindashuai:0 "靳大帅"
+ SQI_over_all_struggle_tooltip:0 "§Y山东的政治斗争已经结束§!"
  SQI_Zheyuan_beat_Zongchang:0 "屈映光上台"
  SQI_Tianran_beat_Zongchang:0 "一贯道夺权"
  SQI_Zongchang_beat_Tianran:0 "靳云鹗保住了自己的位子"
@@ -337,6 +350,63 @@
  SQI_can_obtain_fact:0 "§Y如果张天然或者屈映光上台，便可与大清就工业和建设援助问题展开会谈§!\n"
  sqi_pat_aut_liu_heding_puppet:0 "新皖系军阀"
 
+ SQI_ying_xiang:0 "在山东的博弈"
+ SQI_ying_xiang_desc:0 "在二张相继去世，鲍里斯·阿年科夫和他的雇佣军们夺取山东的权力之后，柏林、东京、北京都迫切的想要这块区域加入自己的势力圈中。尤其是的北京，孙传芳的死亡与国民党的南部的动乱让他们焦头烂额，如果山东再失陷，那就意味着吴佩孚该收拾铺盖滚蛋了。德国人在青岛有着大片的租界，他们也希望山东的新主人能够多倒向他们。日本人的目的是最单纯的，他们只想要在中国拥有更多的桥头堡，来征服这片土地。\n§g在你夺取北京之前，最好平衡好日、徳、清三方的影响力（也就是民粹、市自、社保的党派支持度不要高于50%）§!"
+ SQI_cong_zhi_xi_huo_qu_huo_qi:0 "从[QIE.GetNameWithFlag]获取武器"
+ SQI_cong_ri_ben_huo_qu_huo_qi:0 "从[JAP.GetNameWithFlag]获取武器"
+ SQI_cong_de_guo_huo_qu_huo_qi:0 "从[GER.GetNameWithFlag]获取武器"
+ SQI_cong_de_guo_shu_mai_qing_dao:0 "赎买青岛"
+ SQI_cong_de_guo_shu_mai_wei_hai_wei:0 "赎买威海卫"
+
+ SQI_GER_yin_xiang_li:0 "德意志的阴翳之下"
+ SQI_GER_yin_xiang_li_desc:0 "自从1898年胶东半岛被清政府租借给德意志之后，德国就不断的对着山东半岛露出獠牙。工业及军事实力迅猛崛起的德意志帝国，对于在开拓殖民地方面同英法列强的巨大差距极不甘心，而占领胶州之后，德国终于在继非洲和大洋洲之后，在亚洲找到了立足之地。德皇威廉二世正式命名胶澳租借地的市区为青岛（Tsingtau）。柏林方面决心投入巨资将青岛建设成所谓的§g“模范殖民地”§!。但随着第一次世界大战落下帷幕，德意志的殖民地得到广阔提升，在东亚无论是南京还是北京，甚至是广州、上海都要比这个曾经的§g“模范殖民地”§!更有价值，青岛在帝国内部逐渐变得不受宠了起来，除非他们能够更进一步...\n山东的督理[SQI.GetLeader]是个不受北京宠爱的家伙，而山东省最大的城市青岛正掌握在这些谋求得到皇帝恩宠的德国人手里。一方有钱，一方需要钱，于是这个诡异的同盟就此达成，德国人想要更进一步的控制整个山东，而[SQI.GetLeader]想要彻底摆脱北京和柏林的约束，他们如同两只饿狼，都迫不及待的想要吃掉对方。\n\n§g[GER.GetNameDefCap]§![GER.GetFlag]目前对山东的财政控制为[Getkongzhidu]"
+ SQI_jin_kou_de_guo_shang_ping_mission:0 "德国商品进口"
+ SQI_xiang_de_qi_zheng_shou:0 "对德企加征额外税款"
+ SQI_xiang_de_qi_zheng_shou_desc:0 "尽管我们并没有独立关税权，无法对德国进口的商品征收一分钱，然而这不代表那些德国企业就不需要对我们缴一分钱，即便我们并不能战胜他们，但是我们有一万种方式让我们双方两败俱伤。"
+ SQI_xiang_de_guo_xun_qiu_dai_kuan:0 "向德国寻求贷款"
+ SQI_jin_kou_de_guo_wu_qi:0 "进口德国武器"
+ SQI_jin_kou_de_guo_ka_che:0 "进口德国卡车"
+ SQI_jin_kou_de_guo_huo_pao:0 "进口德国火炮"
+ SQI_yao_qing_de_guo_zhuan_jia:0 "邀请德国工业专家"
+ SQI_de_guo_gong_ye_yuan_zu:0 "德国工业援助"
+ SQI_agricultural_reform_mission_timer:0 "解决粮食危机"
+ SQI_shi_yong_hua_fei:0 "进口化肥"
+ SQI_shi_yong_hua_fei_desc:0 "肥料是个神奇的东西，只需要一点点就能让我们的农作物产出翻个几倍。然而我们并没有掌握相关技术，无法自行生产肥料，从奉天或是南京的进口质量低下，同时他们的产量也无法弥补我们的缺口，在这样的情况下我们只剩下一个选项：德国。因为德国人是不可能放任我们从其他国家进口肥料的。"
+ SQI_water_control:0 "治理水患"
+ SQI_bao_zhang_tu_rang:0 "防范水土流失"
+ SQI_bao_zhang_tu_rang_desc:0 "美洲作物使得我们的粮食产量上涨的同时，我们的农业专家也警告到无节制的耕种使得生态环境遭到严重破坏，引发水土流失，造成更多的自然灾害，尤其是大大增加了黄河决堤所带来的灾害，我们必须预防万一。"
+
+ SQI_di_guo_de_shi_wu:0 "帝国的事务"
+ SQI_MON:0 "整合[MON.GetNameWithFlag]"
+ SQI_TRM:0 "整合[TRM.GetNameWithFlag]"
+ 
+ SQIsmall: "§R低（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQIlittle: "§Y低（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQIbig: "§Y中（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQImore: "§G高（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQIhuge: "§G极高（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQI_GER_spend_all_time_tooltip: "§c德国的控制力§!小幅§Y增长§!"
+ SQI_GER_investment_small_tooltip: "§c德国的控制力§!§Y增长§!§G5%§!"
+ SQI_GER_investment_medium_tooltip: "§c德国的控制力§!§Y增长§!§G10%§!"
+ SQI_GER_investment_large_tooltip: "§c德国的控制力§!§Y增长§!§G15%§!"
+ SQI_GER_investment_giga_tooltip: "§c德国的控制力§!§Y增长§!§G30%§!"
+ SQI_GER_spend_small_tooltip: "§c德国的控制力§!§Y降低§!§G5%§!"
+ SQI_GER_spend_medium_tooltip: "§c德国的控制力§!§Y降低§!§G10%§!"
+ SQI_GER_spend_large_tooltip: "§c德国的控制力§!§Y降低§!§G15%§!"
+ SQI_GER_spend_giga_tooltip: "§c德国的控制力§!§Y降低§!§G30%§!"
+ SQI_GER_eco_invest_small_texticon: "[GER.GetFlag] 5%影响力"
+ SQI_GER_eco_invest_small_texticon_blocked: "[GER.GetFlag] §R5%影响力§!"
+ SQI_GER_eco_invest_medium_texticon: "[GER.GetFlag] 10%影响力"
+ SQI_GER_eco_invest_medium_texticon_blocked: "[GER.GetFlag] §R10%影响力§!"
+ SQI_GER_eco_invest_large_texticon: "[GER.GetFlag] 15%影响力"
+ SQI_GER_eco_invest_large_texticon_blocked: "[GER.GetFlag] §R15%影响力§!"
+ SQI_GER_eco_spend_small_texticon: "[GER.GetFlag] §Y5%影响力§!"
+ SQI_GER_eco_spend_small_texticon_blocked: "[GER.GetFlag] §R5%影响力§!"
+ SQI_GER_eco_spend_medium_texticon: "[GER.GetFlag] §Y10%影响力§!"
+ SQI_GER_eco_spend_medium_texticon_blocked: "[GER.GetFlag] §R10%影响力§!"
+ SQI_GER_eco_spend_large_texticon: "[GER.GetFlag] §Y15%影响力§!"
+ SQI_GER_eco_spend_large_texticon_blocked: "[GER.GetFlag] §R15%影响力§!"
+
  SQI_Two_Zhangs_Enter:0 "两张会"
  SQI_Two_Zhangs_Enter_desc:0 "十多年前，山东还是张宗昌统治的年代，张宗昌和张天然亲密无间，十多年之后，这俩个贼眉鼠眼的家伙依旧勾结在一起，他们整天都在谋划着一件事情——干掉骁威将军靳云鹗督理。但是督理大人可不是张宗昌这种没用的货色，他不会就这么轻易被打倒的..."
  SQI_Zhang_Tianran:0 "宣布革命性指令"
@@ -387,49 +457,50 @@
  SQI_Improving_Our_Technological_Sharing_desc:0 "由于我们的政府缺乏合法性，新一代的官兵得不到机会进入军校深造，我们的行政部门可以招一批青岛和天津的教师，并制定一套军事研究计划。"
 
  SQI_make_shandong_great:0 "挽救山东经济"
- SQI_make_shandong_great_desc:0 "欧战期间，列强忙于互相开战没有余力维持对华经济入侵。在这段时间里民族工业有了飞速发展，在山东最庞大的民族企业自然是苗氏工商业他们依靠垄断广州、上海对华北地区的贸易权发家，从创立成丰面粉厂开始逐渐走上了兴办实业的道路，并在欧战期间不断扩大产业，新办成通纱厂、成大纱厂等等。然而欧战的结束列强入侵恢复，以及《北京条约》的签订，再加上企业自身经营问题，山东的经济就像苗氏工商业一样开始走上下坡路。"
- SQI_chu_li_nong_ye_wei_ji:0 "处理农业危机"
- SQI_chu_li_nong_ye_wei_ji_desc:0 " "
- SQI_nong_ye_duo_yang_hua:0 "作物多样化"
- SQI_nong_ye_duo_yang_hua_desc:0 " "
+ SQI_make_shandong_great_desc:0 "欧战期间，列强忙于互相开战没有余力维持对华经济入侵。在这段时间里民族工业有了飞速发展，在山东最庞大的民族企业自然是苗氏工商业他们依靠垄断广州、上海对华北地区的贸易权发家，从创立成丰面粉厂开始逐渐走上了兴办实业的道路，并在欧战期间不断扩大产业，新办成通纱厂、成大纱厂等等。然而欧战的结束列强入侵恢复，《北京条约》的签订，再加上企业自身经营问题，山东的经济就像苗氏工商业一样开始走上下坡路。"
+ SQI_chu_li_nong_ye_wei_ji:0 "处理粮食危机"
+ SQI_chu_li_nong_ye_wei_ji_desc:0 "美洲作物的引进是中国农业的一次巨大技术进步，尽管山东当时交通不发达，但是极其适应这些作物的旱地气候让这些作物很快在山东推行开了，形成了一种粮-棉-油的作物结构。山东就此开始人口爆炸，依赖农民的智慧，克服了山东并不优越的地质条件，并逐渐成为华北粮仓之一。1896年美棉的引进更是促进了山东的经济发展。但这一切早已成了过往，山东的人口与日俱增，耕种面积却不可能凭空出现，人多地少，粮食危机愈演愈烈。"
+ SQI_nong_ye_duo_yang_hua:0 "选育良种"
+ SQI_nong_ye_duo_yang_hua_desc:0 "种子对于农业的意义是非凡的，如今的粮食危机很大一部分原因就是因为作物的单产量太低了，白白浪费了广袤的土地，为此我们需要像当年引进玉米、甘薯那样从国内海外购买一批优质种子，而不是仅仅购入他们的粮食让我们的大洋白白流入外国佬的手里。如果他们不卖我们偷也要偷回来。"
  SQI_jin_kou_de_guo_fei_liao:0 "进口德国肥料"
- SQI_jin_kou_de_guo_fei_liao_desc:0 " "
- SQI_kuo_da_nong_ye_chu_kou:0 "扩大农业出口"
- SQI_kuo_da_nong_ye_chu_kou_desc:0 " "
+ SQI_jin_kou_de_guo_fei_liao_desc:0 "肥料是个神奇的东西，只需要一点点就能让我们的农作物产出翻个几倍。然而我们并没有掌握相关技术，无法自行生产肥料，从奉天或是南京的进口质量低下，同时他们的产量也无法弥补我们的缺口，在这样的情况下我们只剩下一个选项：德国。因为德国人是不可能放任我们从其他国家进口肥料的。"
+ SQI_kuo_da_nong_ye_chu_kou:0 "水利改革"
+ SQI_kuo_da_nong_ye_chu_kou_desc:0 "黄河是我们的母亲河，但是黄河从来都不是一位仁慈的母亲，近二十年来，尤其是三十年代以来几乎年年水灾，而黄河每次决堤对于我们这个身处下游的省份而言都是一场空前的灾难。我们从来不相信北京能够真的治理好水患，每一次的治理不过是他们从山东捞钱的名义，没有一次水患是真的治理好的。我们无法去武汉、河南等地从源头上解决问题，但是我们可以想办法化解水患带来的影响。"
  SQI_nong_ye_bu_tie:0 "农业补贴工业"
- SQI_nong_ye_bu_tie_desc:0 " "
+ SQI_nong_ye_bu_tie_desc:0 "我们的工业仍然在起步阶段，为了山东的未来，农民需要再更多的付出一些，扩大农业出口，不能只是拘泥于花生这寥寥几种出口，要出口更多的农产品换取更多的外汇，只要富了[SQIGetleadername]，就能实现山东工业化，就能富了全山东。"
  SQI_fang_song_dui_de:0 "请求德国投资"
- SQI_fang_song_dui_de_desc:0 " "
+ SQI_fang_song_dui_de_desc:0 "德国，这个时代最庞大的超级大国，而无论如何，我们的工业都极其依赖德国人的存在，我们需要德国人给予我们更多的投资，有许多经验丰富、富有远见与洞察力的企业家。吸引他们对我们的工业进行投资，从长远来看，这会为少数冒险家带来巨大的回报。我们会为他们大开绿灯，给予一切他们所需要的政策。"
  SQI_cheng_ji_de_guo_she_bei:0 "承接德国落后设备"
- SQI_cheng_ji_de_guo_she_bei_desc:0 " "
+ SQI_cheng_ji_de_guo_she_bei_desc:0 "柏林的股灾严重影响了德国的经济，他们有许多的企业在这一轮危机中破产。这对我们来说当然也是个巨大的危机，但是同时又何尝不是一种机遇呢？我们将购买那些德国破产企业的工业设备，当然我们无法购买到任何先进的技术，但是哪怕是那些落后的设备也足以让我们的工业效率上升许多。"
  SQI_jiang_di_gong_chang_men_kan:0 "降低进厂门槛"
- SQI_jiang_di_gong_chang_men_kan_desc:0 " "
+ SQI_jiang_di_gong_chang_men_kan_desc:0 "山东的工业才刚刚起步，我们不能像那些有着丰厚工业基础的地方那样要求工厂工人必须达到一定的水平才能进厂找工作，或是仅仅限制男性才能进厂。为了山东的工业发展，我们必须睁一只眼闭一只眼让放松要求，如果工人出了什么时期自然有我们的军队出面保障工厂主们的安全，让他们放心大胆的在山东招工！"
  SQI_kuo_jian_ji_nan_bing_gong_chang:0 "扩建济南兵工厂"
- SQI_kuo_jian_ji_nan_bing_gong_chang_desc:0 " "
+ SQI_kuo_jian_ji_nan_bing_gong_chang_desc:0 "济南兵工厂是洋务运动时期的重要一环，生产、管理方面的规章制度，参照江南制造局和天津机器局制定。是当时全国一流的兵器加工厂，如今虽然有些许没落但是无妨，有了德国人的帮助，我们可以将厂房扩得更大，引进更多的新技术，让我们的军队变得更加强盛。"
  SQI_gan_ru_gong_chang:0 "将农民赶入工厂"
- SQI_gan_ru_gong_chang_desc:0 " "
+ SQI_gan_ru_gong_chang_desc:0 "人地矛盾是我们农业危机的重要原因，问题就在于我们的农民实在是太多了，尤其是那些南方难民们逃进来后更是如此。所有要想解决粮食危机有一个非常简单的方式，把这些农民们河流民们全部赶入工厂去，用他们的汗水铸就山东更加辉煌的未来。更何况在工厂里能赚到更多钱，他们还有什么不满的？"
  SQI_jie_chu_ri_ben_ren:0 "接触日本人"
- SQI_jie_chu_ri_ben_ren_desc:0 " "
+ SQI_jie_chu_ri_ben_ren_desc:0 "德国人对我们的控制已经深入骨髓，我们必须想办法缓解，而那些日本人在欧战期间就曾经夺取过一次青岛，利用旧皖系曾经与日本人的联系建立起一条新的秘密通道。用日本人的资金来缓解德国人入侵的危机，我们脚下的钢丝绳已经够多了，再加一条又如何？不过是三个鸡蛋上跳舞罢了。"
  SQI_wu_qi_zi_ji_zi_zhu:0 "武器自给自足"
- SQI_wu_qi_zi_ji_zi_zhu_desc:0 " "
- SQI_shan_xi_gong_ye_hua:0 "山东工业化"
- SQI_shan_xi_gong_ye_hua_desc:0 " "
+ SQI_wu_qi_zi_ji_zi_zhu_desc:0 "济南兵工厂的扩建工程正在如火如荼的进行着，为此我们的军队也需要一场大换装，全部换成我们自己生产的装备，给济南兵工厂提供一份巨大的订单。也能将那些心怀贰意的家伙们掂量掂量，自己的命脉到底掌握在谁的手上。"
+ SQI_shan_xi_gong_ye_hua:0 "加快工业化"
+ SQI_shan_xi_gong_ye_hua_desc:0 "多管齐下，山东的工业化正稳步进行着，我们的经济正在复苏，山东总有一天能够正式步入工业化时代。"
  SQI_lian_tong_si_fang:0 "联通四方"
- SQI_lian_tong_si_fang_desc:0 " "
+ SQI_lian_tong_si_fang_desc:0 "山东并不是一个传统的交通枢纽城市，但是在这个铁路时代，我们有望成为南方与华北的重要纽带，我们也将通过铁路将山东的商品输出到全国。哪怕我们竞争不过南方工业城市，我们依旧能碾压中部那些纯粹农业区。铁路联通四方，我们的商品也将行销四方。"
  SQI_sheng_ji_cai_kuang_ye:0 "升级采矿设备"
- SQI_sheng_ji_cai_kuang_ye_desc:0 " "
- SQI_kai_chai_mei_kuang:0 "开采淄川炭矿"
- SQI_kai_chai_mei_kuang_desc:0 " "
+ SQI_sheng_ji_cai_kuang_ye_desc:0 "时代在进步，我们也不能停滞不前，从德国引进更先进的采矿设备，开采出更多的矿物以提供给我们正在上马的许多工业项目。"
+ SQI_kai_chai_mei_kuang:0 "开采淄川碳矿"
+ SQI_kai_chai_mei_kuang_desc:0 "1904年，德国人在淄博开了山东第一个煤矿——淄川碳矿。淄博不仅有煤，而且是优质煤，能出上等焦炭。而煤炭，是一切工业的起点。"
  SQI_kai_chai_jin_ling_tie_kuang:0 "开采金岭铁矿"
- SQI_kai_chai_jin_ling_tie_kuang_desc:0 " "
+ SQI_kai_chai_jin_ling_tie_kuang_desc:0 "淄博是山东的资源重镇，不仅有煤矿，还有优质的铁矿。金岭镇周边有着许许多多的铁矿，德国人最先进行了开采，欧战期间日本人接管了这些矿山。欧战结束后，我们与德国人共同开发，这里源源不断地开采出大量优质的铁矿石。"
  SQI_kuo_da_yan_tai_gang:0 "扩大烟台港"
- SQI_kuo_da_yan_tai_gang_desc:0 " "
+ SQI_kuo_da_yan_tai_gang_desc:0 "山东最大的港口胶州湾在德国人控制，但是我们手中还有一座烟台港，这里与辽东半岛相望，与奉天、日本有着密切贸易往来。扩建烟台港正是我们计划摆脱德国人的又一步。"
  SQI_sheng_chan_xin_nong_ju:0 "生产新农具"
- SQI_sheng_chan_xin_nong_ju_desc:0 " "
- SQI_bao_hu_si_ying_qi_ye:0 "保护私营企业"
- SQI_bao_hu_si_ying_qi_ye_desc:0 " "
- SQI_yi_qie_wei_le_jin_da_shuai:0 "一切为了靳大帅"
+ SQI_sheng_chan_xin_nong_ju_desc:0 "更好的农具，更多的产量，工农业从来不是割裂的，拖拉机、收割机，尽管我们还没有完全掌握这些设备的生产工艺，但是我们可以仿造进口的德国设备，生产我们逐自己的品牌。我们从不缺销量，每一个村落都必须购置。"
+ SQI_bao_hu_si_ying_qi_ye:0 "保护民族企业"
+ SQI_bao_hu_si_ying_qi_ye_desc:0 "无论如何，我们的民族企业终归都是我们的经济基础，如果没有他们德国人对我们的控制会更加严重。我们必须保护他们，当然，这并非没有代价，我们索取得并不多只不过是些许股份罢了。"
+ SQI_yi_qie_wei_le_jin_da_shuai:0 "一切为了[SQIGetleadername]"
  SQI_yi_qie_wei_le_jin_da_shuai_desc:0 " "
+
  SQI_Turning_Our_Attention_To_Industry:0 "半岛工业振兴"
  SQI_Turning_Our_Attention_To_Industry_desc:0 "虽然山东免于八省联合治理，但是这些年还是有一批厂子破产了。行政部门一直致力于勘探这些空地皮，并且试图引进外资来发展经济。"
  SQI_Reopening_The_Barred_Factories:0 "重开工厂"
@@ -497,57 +568,6 @@
  SQI_Stealing_Sailors_From_The_Legation_Cities:0 "在使馆城市征募水兵"
  SQI_Stealing_Sailors_From_The_Legation_Cities_desc:0 "我们的舰队现在缺人，在这种情况之下，海战的胜败就取决于我们是否能在中立港招到足够的水兵，因此，为了解决这一问题，我们愿意在中国各大港口为我们的舰队征募大量的水兵。"
 
- SQI_ying_xiang:0 "在山东的博弈"
- SQI_ying_xiang_desc:0 "在二张相继去世，鲍里斯·阿年科夫和他的雇佣军们夺取山东的权力之后，柏林、东京、北京都迫切的想要这块区域加入自己的势力圈中。尤其是的北京，孙传芳的死亡与国民党的南部的动乱让他们焦头烂额，如果山东再失陷，那就意味着吴佩孚该收拾铺盖滚蛋了。德国人在青岛有着大片的租界，他们也希望山东的新主人能够多倒向他们。日本人的目的是最单纯的，他们只想要在中国拥有更多的桥头堡，来征服这片土地。\n§g在你夺取北京之前，最好平衡好日、徳、清三方的影响力（也就是民粹、市自、社保的党派支持度不要高于50%）§!"
- SQI_cong_zhi_xi_huo_qu_huo_qi:0 "从[QIE.GetNameWithFlag]获取武器"
- SQI_cong_ri_ben_huo_qu_huo_qi:0 "从[JAP.GetNameWithFlag]获取武器"
- SQI_cong_de_guo_huo_qu_huo_qi:0 "从[GER.GetNameWithFlag]获取武器"
- SQI_cong_de_guo_shu_mai_qing_dao:0 "赎买青岛"
- SQI_cong_de_guo_shu_mai_wei_hai_wei:0 "赎买威海卫"
-
- SQI_GER_yin_xiang_li:0 "德意志的阴翳之下"
- SQI_GER_yin_xiang_li_desc:0 "自从1898年胶东半岛被清政府租借给德意志之后，德国就不断的对着山东半岛露出獠牙。工业及军事实力迅猛崛起的德意志帝国，对于在开拓殖民地方面同英法列强的巨大差距极不甘心，而占领胶州之后，德国终于在继非洲和大洋洲之后，在亚洲找到了立足之地。德皇威廉二世正式命名胶澳租借地的市区为青岛（Tsingtau）。柏林方面决心投入巨资将青岛建设成所谓的§g“模范殖民地”§!。而随着第一次世界大战落下帷幕，德意志的殖民地得到广阔提升，而在东亚无论是南京还是北京都要比这个曾经的§g“模范殖民地”§!更有价值，青岛在帝国内部逐渐变得不受宠了起来，除非他们能够更进一步...\n山东的督理[SQI.GetLeader]是个不受北京宠爱的家伙，而山东省最大的城市青岛正掌握在这些谋求得到皇帝恩宠的德国人手里。一方有钱，一方需要钱，于是这个诡异的同盟就此达成，德国人想要更进一步的控制整个山东，而[SQI.GetLeader]想要彻底摆脱北京和柏林的约束，他们如同两只饿狼，都迫不及待的想要吃掉对方。\n\n§g[GER.GetNameDefCap]§![GER.GetFlag]目前对山东的财政控制为[Getkongzhidu]"
- SQI_jin_kou_de_guo_shang_ping_mission:0 "德国商品进口"
- SQI_xiang_de_qi_zheng_shou:0 "对德企加征额外税款"
- SQI_xiang_de_qi_zheng_shou_desc:0 "尽管我们并没有独立关税权，无法对德国进口的商品征收一分钱，然而这不代表那些德国企业就不需要对我们缴一分钱，即便我们并不能战胜他们，但是我们有一万种方式让我们双方两败俱伤。"
- SQI_xiang_de_guo_xun_qiu_dai_kuan:0 "向德国寻求贷款"
- SQI_jin_kou_de_guo_wu_qi:0 "进口德国武器"
- SQI_jin_kou_de_guo_ka_che:0 "进口德国卡车"
- SQI_jin_kou_de_guo_huo_pao:0 "进口德国火炮"
- SQI_yao_qing_de_guo_zhuan_jia:0 "邀请德国工业专家"
- SQI_de_guo_gong_ye_yuan_zu:0 "德国工业援助"
-
- SQI_di_guo_de_shi_wu:0 "帝国的事务"
- SQI_MON:0 "整合[MON.GetNameWithFlag]"
- SQI_TRM:0 "整合[TRM.GetNameWithFlag]"
- 
- SQIsmall: "§R低（[?SQI.SQI_gea_influence_variable|0]）§!"
- SQIlittle: "§Y低（[?SQI.SQI_gea_influence_variable|0]）§!"
- SQIbig: "§Y中（[?SQI.SQI_gea_influence_variable|0]）§!"
- SQImore: "§G高（[?SQI.SQI_gea_influence_variable|0]）§!"
- SQIhuge: "§G极高（[?SQI.SQI_gea_influence_variable|0]）§!"
- SQI_GER_spend_all_time_tooltip: "§c德国的控制力§!小幅§Y增长§!"
- SQI_GER_investment_small_tooltip: "§c德国的控制力§!§Y增长§!§G5%§!"
- SQI_GER_investment_medium_tooltip: "§c德国的控制力§!§Y增长§!§G10%§!"
- SQI_GER_investment_large_tooltip: "§c德国的控制力§!§Y增长§!§G15%§!"
- SQI_GER_investment_giga_tooltip: "§c德国的控制力§!§Y增长§!§G30%§!"
- SQI_GER_spend_small_tooltip: "§c德国的控制力§!§Y降低§!§G5%§!"
- SQI_GER_spend_medium_tooltip: "§c德国的控制力§!§Y降低§!§G10%§!"
- SQI_GER_spend_large_tooltip: "§c德国的控制力§!§Y降低§!§G15%§!"
- SQI_GER_spend_giga_tooltip: "§c德国的控制力§!§Y降低§!§G30%§!"
- SQI_GER_eco_invest_small_texticon: "[GER.GetFlag] 5%影响力"
- SQI_GER_eco_invest_small_texticon_blocked: "[GER.GetFlag] §R5%影响力§!"
- SQI_GER_eco_invest_medium_texticon: "[GER.GetFlag] 10%影响力"
- SQI_GER_eco_invest_medium_texticon_blocked: "[GER.GetFlag] §R10%影响力§!"
- SQI_GER_eco_invest_large_texticon: "[GER.GetFlag] 15%影响力"
- SQI_GER_eco_invest_large_texticon_blocked: "[GER.GetFlag] §R15%影响力§!"
- SQI_GER_eco_spend_small_texticon: "[GER.GetFlag] §Y5%影响力§!"
- SQI_GER_eco_spend_small_texticon_blocked: "[GER.GetFlag] §R5%影响力§!"
- SQI_GER_eco_spend_medium_texticon: "[GER.GetFlag] §Y10%影响力§!"
- SQI_GER_eco_spend_medium_texticon_blocked: "[GER.GetFlag] §R10%影响力§!"
- SQI_GER_eco_spend_large_texticon: "[GER.GetFlag] §Y15%影响力§!"
- SQI_GER_eco_spend_large_texticon_blocked: "[GER.GetFlag] §R15%影响力§!"
-
 #事件
  shandong.1.t:0 "1936年：山东的转折点"
  shandong.1.d:0 "山东是一个特殊的省份，这里是袁世凯的发祥地，这里也是儒家重镇，无数次的教案、青岛的失陷、德日的残暴行径，义和团的余温在齐鲁大地上从来没有熄灭过，对外国人的仇恨埋藏在每一个爱国山东人的心底。德国人的影响也不止于此，威廉二世那“模范殖民地”的构思为青岛带来了最先进的工业，这也促使了身处山东的军阀或多或少对培植产业、借用外债、控制财政表现出浓厚的兴趣，尽管山东依旧是一个田赋占收入百分之六十以上农业省，但是工业基础丝毫不弱于那些南方省份。但也同样是因为德国人的存在，山东的一切经济运作都离不开他们的身影，哪怕是欧战期间德国人不得不离开，日本人也很快补上了这个缺口，山东的工业从来不为山东人牟利。\n\n1926年，国民党的北伐，德国人的干涉更是加重了这一点，在无能的张宗昌统治下山东几乎快要成为德国人的附属。但是1928年，靳云鹗的到来扭转了这一点，尽管比起张宗昌，靳云鹗不仅没有北京的宠爱甚至还失去了奉天的支持。但是靳云鹗从来都不是张宗昌那个只知道抽大烟、嫖娼赌博的土匪，他继续对德国人示好，也在背后利用民族情绪煽动着对山东民族工业的支持。他在这条钢丝绳上左右摇晃但又稳稳当当，然后命运向他开了一个玩笑...在他为民族主义煽风点火的同时，另一个人却收获了更大的果实。那就是在泰山6600阶梯之上，那个自封为一贯道第十八代祖师的张天然。被靳云鹗赶下去的张宗昌也跑到了泰山之上，宣布自己皈依一贯道，更何况北京从来没有放弃过在山东换上一个更加稳妥的人..."
@@ -555,6 +575,13 @@
  SQI.1.t:0 "青岛四十年"
  SQI.1.d:0 "青岛本是山东半岛东南一个默默无闻的小渔港，直到巨野教案的爆发，胶州湾被德国人占领，由此开启了列强“瓜分中国”风潮，这座渔港正式走上历史舞台。德皇威廉二世在1888年继承王位，他的抱负是：既然先祖威廉大帝的成就在于使德意志帝国成为欧洲强国，那么自己的使命便在于使德意志帝国成为世界强国。山东半岛便成为德意志帝国的重要考虑，而青岛更是势在必得的首要目标。胶州湾便是德意志向世界发出的第一枪。为了建设这个远东的重要基地，德意志帝国一开始就将这个占领地定位为“模范殖民地”，即企图用科学规划、专业性实施和国家监督，建设一个现代的、讲求效益的殖民地，但同时也强调“种族主义”意识形态的贯彻。第一年德国投入500万马克，第二年为850万马克，其后八年(1900～1907)德国平均每年支出一千二三百万马克。这十年间，德国投资颇多，而收入甚少。直到1908年之后，投资效益才逐渐浮现，本国的补助才逐年降低，而地方收益则呈逐年增加之势。\n\n德国人初到胶州湾时，此地人数不过1500人，不及中国的一个村落，十余年之后，青岛却是中国之大都市。当然，德国人并非是来青岛做慈善的，他们的目标从来都不只是青岛，他觊觎的目光其实是射向黄河中下游这个更大的区块。而这一切来得是如此之快，第一次世界大战的胜利为德意志攫取了广袤的非洲殖民地和东南亚殖民地，随后中国国民党的北伐战争又给了德国再次介入中国的借口。在南方扶持齐燮元，在北方扶持满清皇室，尽管青岛仍旧是德国在中国的少数领地，但是其重要性变得却越来越低。曾经的青岛对于每一个前来讨生活的德国人而言是机会的天堂，可是如今，柏林的资金越来越多的流入南京、广州、上海甚至是天津，这个北方曾经的繁华都市正在一天又一天衰落下去，青岛逐渐的变成了德意志官员们的流放地..."
  SQI.1.a:0 "不，这一切都不会发生！"
+ SQI.2.t:0 "粮食危机加剧"
+ SQI.2.d:0 "黑色星期一的余波呼啸而过，对山东造成的最大危机是德国政府为了保护他们的农民提高了农作物关税，尽管德国并非我们的主要粮食进口来源。但是最大出口国的美国如今深陷内乱之中，粮食出口锐减，德国人的关税政策使得来自东欧的粮食只能烂在土里，而我们的人民也只能饥肠辘辘，去年水灾旱灾的余波尚存，收成本来就不如往年的三分之一，如今滴雨未下，倘若再迎来一场春旱，收成必然再度锐减。我们的粮食储备早已经减低，也许我们只能期待澳大利亚能够带来今年加大出口的好消息，又或是期盼我们的那些军阀同僚们能够看在往日的情分上拉我们一把，再或者北京城里的玉帅能够赈济灾民，不过这又怎么可能发生呢。"
+ SQI.2.a:0 "把军队派下去，准备镇压暴乱吧"
+ SQI.3.t:0 "粮食危机已经解除"
+ SQI.3.d:0 " "
+ SQI.3.a:0 " "
+
  shandong.2.t:0 "路中节到了济南"
  shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
  shandong.2.a:0 "子弹总得有个去处"
