站在KR的肩膀上

--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -187,6 +187,7 @@
  SQI_liang_shi_wei_ji_jia_juA:0 "赈济灾民"
  SQI_liang_shi_wei_ji_jia_juA_desc:0 "为躲避南方的混乱，从前山东人为主的闯关东，却反过来变成了流民们逃难山东，成千上万的人逃荒到了山东。难民们在军阀的苛捐杂税和一贯道的救世承诺之间徘徊着，仅仅是将山东当作逃难的一个落脚点。而流民的涌入最直观的体现便是粮食危机的加剧。人均拥有的耕地再下一个台阶，山东地区的粮食危机以及到了无法忽视的地步。1935年的黄河决堤更是令本就饥饿的山东雪上加霜。\n\n农夫苦农夫苦，锄禾日当午，背赤紫汗滴禾下土，终日劳作不息至。农夫苦农夫苦，天旱地又枯釜中无粒粟，儿女牵衣泪如雨。农夫苦农夫苦，吏催租收成不足，无钱付，只得咬牙切齿售儿女。"
  SQI_liang_shi_wei_ji_jia_juB:0 "稳固的粮食安全"
+ SQI_liang_shi_wei_ji_jia_juC:0 "农业补贴工业"
  SQI_Rampant_drug_trade:0 "猖獗的毒品贸易"
  SQI_Rampant_drug_trade_desc:0 "狗日的张宗昌抽大烟成瘾，他的那支该死的军队也是一个巨大的毒窝。这给山东的督理靳云鹗带来了无穷的困扰，政府财政在无穷的毒品潮中濒临崩溃"
  SQI_gea_influence_idea0:0 "德国人的影响力：§R微弱§!"
@@ -201,6 +202,7 @@
  SQI_gea_influence_idea4_desc:0 "§R[GER.GetName]已经几乎完全控制了我们的经济！§!"
  SQI_reynaud_economy:0 "保护民族工业"
  SQI_reynaud_economy_desc:0 "这是我们经济的基础，也是我们财产的保障，他们的事情就是我们的事情。"
+ SHX_expanded_beijing_investment:0 "德国投资"
  SQI_Yiguandao_revolt:0 "一贯道暴乱"
  SQI_Yiguandao_revolt_desc:0 "如果天师去世，那么一贯道就会由其副手和次级管理者运营。目前一贯道正让信徒们焚烧财产，并移居到石窟里，以预备大劫的到来。因此我们现在还不能从这批人身上捞到东西。"
  SQI_Peasant_revolt:0 "农民暴乱"
@@ -240,12 +242,16 @@
 
  SQI_zi_yuan_zhong_zheng_modifier:0 "资源重镇"
  SQI_yellow_river_strikes_modifier:0 "黄河决堤"
+ SQI_yellow_river_strikes_modifier_desc:0 "洪流泛滥，田禾淹没，人畜漂浮，灾情严重。沿堤灾黎约占30余里，犹逐增加，男女露宿，目击心伤...附近村庄几遭全毁，淹死男女约五百余人，牲畜无算。"
  SQI_jiangsu_shandong_deal_dynamic_modifier:0 "开发江苏"
 
+ jinan_arsenal_improved_SQI:0 "步兵装备制造商"
  luda_mining_company:0 "鲁大矿业集团"
  SQI_schantung_bergbaugesellschaft:0 "山东铁路矿业公司"
  seventy_two_cannon_artillery_foundry:0 "七二炮铸造厂"
  jinan_arsenal:0 "济南兵工厂"
+ jinan_arsenal_improved:0 "济南兵工厂"
+ jinan_arsenal_mio_desc:0 "步兵装备生产设计商\n§L济南兵工厂兴建于1875年，是一家历史悠久的军工企业。生产机构设机器、火药、枪弹、白药、炼铁、铸铁、轧铜、化铜、木工、工程10所。以枪弹、手榴弹、飞机炸弹引信为主要产品。§!"
  SQI_si_fang_ji_che:0 "青岛四方机车车辆"
  SQI_si_fang_ji_che_desc:0 "在德占时期，德国根据殖民地发展需要，大举进行与建港、筑路相配套的工程和重要的市政工程建设。德皇威廉二世决心将青岛建设成所谓的“模范殖民地”，成为德国军队在远东一个牢不可破的桥头堡。因此，德国在1900年到1910年间，在青岛兴建了一批工厂，成为青岛早期工业发展的重要基石。德国在修筑胶济铁路的同时，于1900年10月动工兴建了山东铁路四方总修理厂，属德国德华山东铁路公司下辖机构，总投资158.7万马克，成为继唐山、大连两厂后第三家出现于中国的铁路机车车辆工厂。"
  SQI_qing_dao_zao_chuan_chang:0 "青岛造船厂"
@@ -267,6 +273,10 @@
  Zongchang_dead:0 "张宗昌死了"
  Tianran_dead:0 "张天然死了"
  Zheyuan_dead:0 "屈映光死了"
+ improve_jinan_arsenal: "已完成国策§H扩建济南兵工厂§!"
+ improve_jinan_arsenal_tt: "\n解锁§H济南兵工厂§!的改进版本。\n如果§H济南兵工厂§!已被雇用，则以改进版本替换当前版本："
+ SQI_agricultural_reform_mission_timer_tooltip: "这将加快我们处理§Y粮食危机§!的速度"
+ SQI_agricultural_reform_mission_timer_down_tooltip: "如果没有解决掉§Y粮食危机§!，这将减缓我们处理§Y粮食危机§!的速度"
  SQI_feng_supports_zhang_vs_anq:0 "奉天支持靳云鹗对抗皖系"
  SQI_LSP:0 "§H山东§!成功整合六省"
  SQI_tianran_can_reclaim_tooltip:0 "§G天师张天然现在可以实现他自己的人生抱负，宣称自己有建立新六省联合的使命与义务\n§!"
@@ -369,10 +379,15 @@
  SQI_jin_kou_de_guo_huo_pao:0 "进口德国火炮"
  SQI_yao_qing_de_guo_zhuan_jia:0 "邀请德国工业专家"
  SQI_de_guo_gong_ye_yuan_zu:0 "德国工业援助"
+ SQI_gu_li_guo_huo:0 "鼓励国货"
  SQI_agricultural_reform_mission_timer:0 "解决粮食危机"
+ SQI_jiang_di_dian_zu:0 "耕者有其田"
+ SQI_jiang_di_dian_zu_desc:0 "农民能够占到我省人口的百分之九十，耕种优质农田的大多数都是雇农、佃农或者半佃农，自耕农们只拥有那些贫瘠的土地。然而同时，省内山东大地主并不多，大部分情况下农民们也是按照资本主义的方式雇佣，时土地使用权与所有权的分散，使得拥有相当土地的地主、富农将自己无力耕种的土地或租佃或雇工经营，而农民自身不仅缺少资金、牲畜、种子及生产工具，还极易受到各种因素的影响，如婚丧、天灾等，因此不可能租种整批田地。为了解决这种情况，我们就需要让地主们全身心的投入，让农民们赎买他们耕种的土地，去实现孙中山所谓的“耕者有其田”。"
+ SQI_maintain_order_in_countryside:0 "解决匪患"
  SQI_shi_yong_hua_fei:0 "进口化肥"
  SQI_shi_yong_hua_fei_desc:0 "肥料是个神奇的东西，只需要一点点就能让我们的农作物产出翻个几倍。然而我们并没有掌握相关技术，无法自行生产肥料，从奉天或是南京的进口质量低下，同时他们的产量也无法弥补我们的缺口，在这样的情况下我们只剩下一个选项：德国。因为德国人是不可能放任我们从其他国家进口肥料的。"
- SQI_water_control:0 "治理水患"
+ SQI_water_control:0 "治理水患旱灾"
+ SQI_water_control_desc:0 "几乎每年山东都会面临旱灾，每隔一两年便有一场涝灾，三五年一场洪灾，近些年黄河更是年年决堤。33年的洪灾带来的影响还没有散去，去年却又发生了一场。"
  SQI_bao_zhang_tu_rang:0 "防范水土流失"
  SQI_bao_zhang_tu_rang_desc:0 "美洲作物使得我们的粮食产量上涨的同时，我们的农业专家也警告到无节制的耕种使得生态环境遭到严重破坏，引发水土流失，造成更多的自然灾害，尤其是大大增加了黄河决堤所带来的灾害，我们必须预防万一。"
 
@@ -485,7 +500,7 @@
  SQI_shan_xi_gong_ye_hua:0 "加快工业化"
  SQI_shan_xi_gong_ye_hua_desc:0 "多管齐下，山东的工业化正稳步进行着，我们的经济正在复苏，山东总有一天能够正式步入工业化时代。"
  SQI_lian_tong_si_fang:0 "联通四方"
- SQI_lian_tong_si_fang_desc:0 "山东并不是一个传统的交通枢纽城市，但是在这个铁路时代，我们有望成为南方与华北的重要纽带，我们也将通过铁路将山东的商品输出到全国。哪怕我们竞争不过南方工业城市，我们依旧能碾压中部那些纯粹农业区。铁路联通四方，我们的商品也将行销四方。"
+ SQI_lian_tong_si_fang_desc:0 "山东是一个传统的交通枢纽城市，尤其是在这个铁路时代，我们有望成为南方与华北的重要纽带，我们也将通过铁路将山东的商品输出到全国。哪怕我们竞争不过南方工业城市，我们依旧能碾压中部那些纯粹农业区。铁路联通四方，我们的商品也将行销四方。"
  SQI_sheng_ji_cai_kuang_ye:0 "升级采矿设备"
  SQI_sheng_ji_cai_kuang_ye_desc:0 "时代在进步，我们也不能停滞不前，从德国引进更先进的采矿设备，开采出更多的矿物以提供给我们正在上马的许多工业项目。"
  SQI_kai_chai_mei_kuang:0 "开采淄川碳矿"
@@ -581,6 +596,9 @@
  SQI.3.t:0 "粮食危机已经解除"
  SQI.3.d:0 " "
  SQI.3.a:0 " "
+ SQI.4.t:0 "农村匪患"
+ SQI.4.d:0 "辛亥革命以来，山东便是受战乱影响较重的地区，而哪里有战争，哪里的耕地、庄家、房屋就被破坏殆尽。没有其他现象对农村造成过像敌对军事集团互相争夺地盘时造成的这样的动乱和不幸。尤其是二十年代，山东境内战乱连年，特别是张宗昌督鲁期间（1925~1928 年），连年战争，未曾稍休。张宗昌穷兵黩武，好战成性。张宗昌在山东招兵的白棋，遍地飞扬。在其督鲁期间，先后与孙传芳爆发鲁苏战争，与靳云鹏、李纪才爆发鲁豫之战，同时联合直奉军阀阻击国民军北伐。每战之后，尸横遍野。战争对农村的破坏知只是兵灾的一部分，军队的掠夺，尤其是溃军的掠夺也使得农村不堪其扰，军队的掠夺经常对战后的农村造成第二次伤害，战后余生的村庄再次遭到重创。这一切都要等到靳云鹗大帅将张宗昌赶走后才好转了起来。\n\n但是这不代表侵扰农村的兵灾消失了，尤其是张宗昌的旧部们纷纷转头就重拾旧业，落草为寇。农民能够对付歉收和洪水，他们带着他们的家财逃到其他地方，等到灾害过去，然后再回来。但军队的掠夺是另一回事。它通常意味着财产和生命的双重损失。匪患对农村的抢劫除了直接袭击村庄，抢劫财物外，另一种重要的手段是“绑票勒索”。土匪通过绑架勒索的向地主富农索取钱财，面对土匪的劫掠，不少地主富户将田地拍卖，逃生到较为安全的城镇。导致农村长年动荡不安，税收年年下跌。"
+ SQI.4.a:0 "这都是我的钱！"
 
  shandong.2.t:0 "路中节到了济南"
  shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
