--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2407,7 +2407,7 @@
  qieroc.6.d:0 "本次大选复出政坛的，不止章士钊一人，曾经担任过民国大总统与多届总理的颜惠庆也宣布了自己的复出。他和自己的一些老朋友一起复兴了早已解散的共和党。虽然和胡适的进步党一样，大众为了区别会称他们为新共和党。但是除了名字他们和那个旧共和党基本上也没什么联系了。他们的政治观念完全不同，岁月没有磨平他的棱角，现在的他反而更加强硬。经过了早年间多次政变与反政变的颜惠庆想要建立一个更加强大的政府，而不是现在这般软弱，什么人都能出来宣称自己妄图竞选总统。"
  qieroc.6.a:0 "希望他能成功"
  qieroc.7.t:0 "工团党希望参加选举"
- qieroc.7.d:0 "虽然本次选举，绝大多数的工团党人都对此保持抵制，但是还是有些人宣布自己将要参选，比如曾经的工团党四川根据地的领导人张国焘。他在四川广泛的宣传自己的政治理念，希望选民们投他一票。虽然这种行为遭到其他工团党人的一直抵制，发文与他割席，据称工团党的党中央还想要开除他的党籍。但是这些都没阻止他竞选的步伐，虽然其实他的支持率基本上连初选都过不了。但是他还是坚持着自己竞选的意图。"
+ qieroc.7.d:0 "虽然本次选举，绝大多数的工团党人都对此保持抵制，但是还是有些人宣布自己将要参选，比如曾经的工团党四川根据地的领导人张国焘。他在四川广泛的宣传自己的政治理念，希望选民们投他一票。然而这种行为遭到其他工团党人的一致抵制，纷纷发文与他割席，并谴责他是叛徒，据称工团党的党中央还想要开除他的党籍。但是这些都没阻止他竞选的步伐，虽然其实他的支持率基本上连初选都过不了。但是他还是坚持着自己竞选的意图。"
  qieroc.7.a:0 "他在坚持个什么？"
  qieroc.8.t:0 "大选之日"
  qieroc.8.d:0 "经过了漫长的筹备工作，我们终于迎来了中华民国自统一以来的首次总统选举。今天是共和国的选举日，从北京到南宁，所有真正的中国人都聚集在投票站，表达着他们的心声。正如每个民主国家在每一次选举中所说的那样，这次选举可能是中华民国史上最重要的一次选举。而也与每次选举一样，有来自全国上上下下大大小小十几个政党的总统候选人供公民选择。当然，如果你愿意，你可以把票投给任何你中意的政党，反正各地方性党派在隔壁的城市也拿不到几张选票，比如张国焘他最终的支持率惨淡之极。真正有资格窥伺总统的候选人只有五个人四个党。首先是进步党的胡适，他把这次选举看作是国家对他总统资格的一次公认，而非真正的选举。其次是民社党的张君劢，他的主张也吸引了不少人的支持。再其次就是民主宪政党，顾维钧与章士钊的合作虽然怪异，但是还是从左派到右派吸纳了不少选民的欢心。最后支持度最低的则是共和党的颜惠庆，他奇特的思想并没有赢取太多人的认可，大家都认为他不可能胜选。但是没到最后一刻，谁又能真的确定自己会赢呢？"
