--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -202,7 +202,10 @@
  SQI_gea_influence_idea4_desc:0 "§R[GER.GetName]已经几乎完全控制了我们的经济！§!"
  SQI_reynaud_economy:0 "保护民族工业"
  SQI_reynaud_economy_desc:0 "这是我们经济的基础，也是我们财产的保障，他们的事情就是我们的事情。"
- SHX_expanded_beijing_investment:0 "德国投资"
+ SQI_expanded_bolin_investment:0 "德国投资"
+ SQI_zi_ji_zhi_zu:0 "自给自足"
+ SQI_chantiers_de_la_jeunesse:0 "人力资源"
+ SQI_chantiers_de_la_jeunesse3:0 "稳步工业化"
  SQI_Yiguandao_revolt:0 "一贯道暴乱"
  SQI_Yiguandao_revolt_desc:0 "如果天师去世，那么一贯道就会由其副手和次级管理者运营。目前一贯道正让信徒们焚烧财产，并移居到石窟里，以预备大劫的到来。因此我们现在还不能从这批人身上捞到东西。"
  SQI_Peasant_revolt:0 "农民暴乱"
@@ -273,6 +276,7 @@
  Zongchang_dead:0 "张宗昌死了"
  Tianran_dead:0 "张天然死了"
  Zheyuan_dead:0 "屈映光死了"
+ SQI_industry_to_all_tooltip: "工业精神将被合并为一个更强大的效果"
  improve_jinan_arsenal: "已完成国策§H扩建济南兵工厂§!"
  improve_jinan_arsenal_tt: "\n解锁§H济南兵工厂§!的改进版本。\n如果§H济南兵工厂§!已被雇用，则以改进版本替换当前版本："
  SQI_agricultural_reform_mission_timer_tooltip: "这将加快我们处理§Y粮食危机§!的速度"
@@ -594,8 +598,8 @@
  SQI.2.d:0 "黑色星期一的余波呼啸而过，对山东造成的最大危机是德国政府为了保护他们的农民提高了农作物关税，尽管德国并非我们的主要粮食进口来源。但是最大出口国的美国如今深陷内乱之中，粮食出口锐减，德国人的关税政策使得来自东欧的粮食只能烂在土里，而我们的人民也只能饥肠辘辘，去年水灾旱灾的余波尚存，收成本来就不如往年的三分之一，如今滴雨未下，倘若再迎来一场春旱，收成必然再度锐减。我们的粮食储备早已经减低，也许我们只能期待澳大利亚能够带来今年加大出口的好消息，又或是期盼我们的那些军阀同僚们能够看在往日的情分上拉我们一把，再或者北京城里的玉帅能够赈济灾民，不过这又怎么可能发生呢。"
  SQI.2.a:0 "把军队派下去，准备镇压暴乱吧"
  SQI.3.t:0 "粮食危机已经解除"
- SQI.3.d:0 " "
- SQI.3.a:0 " "
+ SQI.3.d:0 "在[SQI.GetLeader]的一系列运筹帷幄之下，如今的山东已经从粮食危机的深渊中解脱了出来，山东将不再饱受饥饿的折磨，这是一场难得可贵的胜利，没有人不会称赞我们的省长是一名爱民如子的好省长。"
+ SQI.3.a:0 "今天是个好日子"
  SQI.4.t:0 "农村匪患"
  SQI.4.d:0 "辛亥革命以来，山东便是受战乱影响较重的地区，而哪里有战争，哪里的耕地、庄家、房屋就被破坏殆尽。没有其他现象对农村造成过像敌对军事集团互相争夺地盘时造成的这样的动乱和不幸。尤其是二十年代，山东境内战乱连年，特别是张宗昌督鲁期间（1925~1928 年），连年战争，未曾稍休。张宗昌穷兵黩武，好战成性。张宗昌在山东招兵的白棋，遍地飞扬。在其督鲁期间，先后与孙传芳爆发鲁苏战争，与靳云鹏、李纪才爆发鲁豫之战，同时联合直奉军阀阻击国民军北伐。每战之后，尸横遍野。战争对农村的破坏知只是兵灾的一部分，军队的掠夺，尤其是溃军的掠夺也使得农村不堪其扰，军队的掠夺经常对战后的农村造成第二次伤害，战后余生的村庄再次遭到重创。这一切都要等到靳云鹗大帅将张宗昌赶走后才好转了起来。\n\n但是这不代表侵扰农村的兵灾消失了，尤其是张宗昌的旧部们纷纷转头就重拾旧业，落草为寇。农民能够对付歉收和洪水，他们带着他们的家财逃到其他地方，等到灾害过去，然后再回来。但军队的掠夺是另一回事。它通常意味着财产和生命的双重损失。匪患对农村的抢劫除了直接袭击村庄，抢劫财物外，另一种重要的手段是“绑票勒索”。土匪通过绑架勒索的向地主富农索取钱财，面对土匪的劫掠，不少地主富户将田地拍卖，逃生到较为安全的城镇。导致农村长年动荡不安，税收年年下跌。"
  SQI.4.a:0 "这都是我的钱！"
