大炮开兮轰他娘

--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -256,8 +256,11 @@
  jinan_arsenal_improved:0 "济南兵工厂"
  jinan_arsenal_mio_desc:0 "步兵装备生产设计商\n§L济南兵工厂兴建于1875年，是一家历史悠久的军工企业。生产机构设机器、火药、枪弹、白药、炼铁、铸铁、轧铜、化铜、木工、工程10所。以枪弹、手榴弹、飞机炸弹引信为主要产品。§!"
  SQI_si_fang_ji_che:0 "青岛四方机车车辆"
+ SQI_si_fang_mio_desc:0 "机动机械化设计商\n§L山东铁路四方总修理厂兴建于1900年10月，德国德华山东铁路公司下辖机构，总投资158.7万马克，是继唐山、大连两厂后第三家出现于中国的铁路机车车辆工厂。而随着欧战的胜利，该厂也不仅仅局限于铁路领域，开始逐步引进民用车辆生产。§!"
  SQI_si_fang_ji_che_desc:0 "在德占时期，德国根据殖民地发展需要，大举进行与建港、筑路相配套的工程和重要的市政工程建设。德皇威廉二世决心将青岛建设成所谓的“模范殖民地”，成为德国军队在远东一个牢不可破的桥头堡。因此，德国在1900年到1910年间，在青岛兴建了一批工厂，成为青岛早期工业发展的重要基石。德国在修筑胶济铁路的同时，于1900年10月动工兴建了山东铁路四方总修理厂，属德国德华山东铁路公司下辖机构，总投资158.7万马克，成为继唐山、大连两厂后第三家出现于中国的铁路机车车辆工厂。"
  SQI_qing_dao_zao_chuan_chang:0 "青岛造船厂"
+ SQI_zao_xin_lun_chuan:0 "肇兴轮船"
+ SQI_siemens_schuckert:0 "青岛飞机制造厂"
  qingdao_dian_deng_company:0 "青岛电灯厂"
 
  SQItianran:0 "张天师"
