--- a/localisation/QD_military_industrial_organization_l_simp_chinese.yml
+++ b/localisation/QD_military_industrial_organization_l_simp_chinese.yml
@@ -1,4 +1,6 @@
 ﻿l_simp_chinese:
+ SQI_si_fang_cic_1: "$amo_upgrade_1_1$"
+ SQI_si_fang_cic_2: "$amo_upgrade_1_1$"
  imz_upgrade_1: "快速升级"
  imz_upgrade_2: "长寿命生产运行"
  imz_upgrade_3: "消除材料浪费"
@@ -11,3 +13,27 @@
  imz_upgrade_2_1: "竞争支部的影响"
  imz_upgrade_2_2: "敲定部件标准化"
  imz_upgrade_3_1: "改革济南兵工厂"
+ amo_upgrade_1: "延长摩托化引擎寿命"
+ amo_upgrade_2: "延长坦克引擎寿命"
+ amo_upgrade_3: "延长机械化引擎寿命"
+ amo_upgrade_1_1: "极度摩托化引擎输出"
+ amo_upgrade_1_2: "适度摩托化引擎输出"
+ amo_upgrade_1_3: "适度坦克引擎输出"
+ amo_upgrade_1_3.5: "极度坦克引擎输出"
+ amo_upgrade_1_4: "适度机械化引擎输出"
+ amo_upgrade_1_5: "极度机械化引擎输出"
+ amo_upgrade_2_1: "清洁燃料"
+ amo_upgrade_2_2: "优质燃料"
+ amo_upgrade_3_1: "改进青岛四方机车车辆"
+ bmz_upgrade_2: "扩展济南铁路"
+ bmz_upgrade_1_1: "简化装配程序"
+ bmz_upgrade_1_2: "标准化火炮部件"
+ bmz_upgrade_1_3: "扩展南方路线"
+ bmz_upgrade_1_4: "扩充打击套件"
+ bmz_upgrade_1_5: "混凝土击碎能力"
+ bmz_upgrade_2_1: "降低炮弹风阻"
+ bmz_upgrade_2_2: "起重机操作装填机制"
+ bmz_upgrade_2_3: "实验性原型机"
+ bmz_upgrade_2_4: "改进炮管材料"
+ SQI_si_fang_trait_cic_tt: "§g每有一级§H军工机构§!规模，通过研究获取的£civ_factory_output §H经济产能盈余§!将额外增加§G+250§!§!"
+ SQI_si_fang_research_cic_tt: "\n§g提高§H军工机构§!规模，也将提高通过[?CIC_bonus]研究获取的£civ_factory_output §H经济产能盈余§!\n\n在该活动期间，获取的£civ_factory_output §H经济产能盈余§!总值：§W[?total_campaign_CIC]§!§!"
