数英雄兮张宗昌

--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -523,6 +523,15 @@
  SQI_yi_qie_wei_le_jin_da_shuai:0 "一切为了[SQIGetleadername]"
  SQI_yi_qie_wei_le_jin_da_shuai_desc:0 " "
 
+ SQI_chu_li_jun_dui:0 "处理军队"
+ SQI_chu_li_jun_dui_desc:0 " "
+ SQI_xin_yang_zhi_jun:0 "信仰之军"
+ SQI_xin_yang_zhi_jun_desc:0 " "
+ SQI_de_shi_jun_dui:0 "德式军队"
+ SQI_de_shi_jun_dui_desc:0 " "
+ SQI_xin_sho_qi_bing:0 "现代化骑兵部队"
+ SQI_xin_sho_qi_bing_desc:0 " "
+
  SQI_Turning_Our_Attention_To_Industry:0 "半岛工业振兴"
  SQI_Turning_Our_Attention_To_Industry_desc:0 "虽然山东免于八省联合治理，但是这些年还是有一批厂子破产了。行政部门一直致力于勘探这些空地皮，并且试图引进外资来发展经济。"
  SQI_Reopening_The_Barred_Factories:0 "重开工厂"
@@ -601,11 +610,14 @@
  SQI.2.d:0 "黑色星期一的余波呼啸而过，对山东造成的最大危机是德国政府为了保护他们的农民提高了农作物关税，尽管德国并非我们的主要粮食进口来源。但是最大出口国的美国如今深陷内乱之中，粮食出口锐减，德国人的关税政策使得来自东欧的粮食只能烂在土里，而我们的人民也只能饥肠辘辘，去年水灾旱灾的余波尚存，收成本来就不如往年的三分之一，如今滴雨未下，倘若再迎来一场春旱，收成必然再度锐减。我们的粮食储备早已经减低，也许我们只能期待澳大利亚能够带来今年加大出口的好消息，又或是期盼我们的那些军阀同僚们能够看在往日的情分上拉我们一把，再或者北京城里的玉帅能够赈济灾民，不过这又怎么可能发生呢。"
  SQI.2.a:0 "把军队派下去，准备镇压暴乱吧"
  SQI.3.t:0 "粮食危机已经解除"
- SQI.3.d:0 "在[SQI.GetLeader]的一系列运筹帷幄之下，如今的山东已经从粮食危机的深渊中解脱了出来，山东将不再饱受饥饿的折磨，这是一场难得可贵的胜利，没有人不会称赞我们的省长是一名爱民如子的好省长。"
+ SQI.3.d:0 "在[SQI.GetLeader]的一系列运筹帷幄之下，如今的山东已经从粮食危机的深渊中解脱了出来，尽管粮食依旧不像那些南方一般充足，但是至少从此以后山东将不再饱受饥饿的折磨，这是一场难得可贵的胜利，没有人不会称赞我们的省长是一名爱民如子的好省长。至于省长在其中发的那些横财，就无人在意了。"
  SQI.3.a:0 "今天是个好日子"
  SQI.4.t:0 "农村匪患"
  SQI.4.d:0 "辛亥革命以来，山东便是受战乱影响较重的地区，而哪里有战争，哪里的耕地、庄家、房屋就被破坏殆尽。没有其他现象对农村造成过像敌对军事集团互相争夺地盘时造成的这样的动乱和不幸。尤其是二十年代，山东境内战乱连年，特别是张宗昌督鲁期间（1925~1928 年），连年战争，未曾稍休。张宗昌穷兵黩武，好战成性。张宗昌在山东招兵的白棋，遍地飞扬。在其督鲁期间，先后与孙传芳爆发鲁苏战争，与靳云鹏、李纪才爆发鲁豫之战，同时联合直奉军阀阻击国民军北伐。每战之后，尸横遍野。战争对农村的破坏知只是兵灾的一部分，军队的掠夺，尤其是溃军的掠夺也使得农村不堪其扰，军队的掠夺经常对战后的农村造成第二次伤害，战后余生的村庄再次遭到重创。这一切都要等到靳云鹗大帅将张宗昌赶走后才好转了起来。\n\n但是这不代表侵扰农村的兵灾消失了，尤其是张宗昌的旧部们纷纷转头就重拾旧业，落草为寇。农民能够对付歉收和洪水，他们带着他们的家财逃到其他地方，等到灾害过去，然后再回来。但军队的掠夺是另一回事。它通常意味着财产和生命的双重损失。匪患对农村的抢劫除了直接袭击村庄，抢劫财物外，另一种重要的手段是“绑票勒索”。土匪通过绑架勒索的向地主富农索取钱财，面对土匪的劫掠，不少地主富户将田地拍卖，逃生到较为安全的城镇。导致农村长年动荡不安，税收年年下跌。"
  SQI.4.a:0 "这都是我的钱！"
+ SQI.5.t:0 "崂山汽水厂"
+ SQI.5.d:0 "青岛生产汽水的历史相当悠久。德占之初，1897年即有德商马彦汽水厂在兰山路开业，因为优良的水质和口感，很快在香港、日本、德国及国内市场打开了销路，崂山矿泉水也随之美名远扬。欧战前后，青岛的汽水厂就发展到了六七家，不过仅有大连制冰汽水厂和崂山汽水公司产量较高，质量较好，设备也比较先进。此外另有几家中国小厂，规模不大，设备也比较简陋，基本都是手工操作。由于竞争能力不强，都先后倒闭或转业了。崂山汽水公司因自然条件和设备较好，再加上有一段时间因有德商美最时洋行投资，资金比较充裕。唯有该公司的虎头牌汽水。可与日商大连制冰汽水厂的狮头牌汽水相抗衡。也是少数在这些年里，没有被德国人和日本人给搞跨吞并掉的中国大厂。尤其是前两年，崂山汽水公司凭借崂山矿泉水的卓越品质，在厂区内勘探挖掘了第二口水井，推出了我国第一瓶果味含气汽水，引起轰动。"
+ SQI.5.a:0 "这可是优质企业"
 
  shandong.2.t:0 "路中节到了济南"
  shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
