--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -524,13 +524,47 @@
  SQI_yi_qie_wei_le_jin_da_shuai_desc:0 " "
 
  SQI_chu_li_jun_dui:0 "处理军队"
- SQI_chu_li_jun_dui_desc:0 " "
+ SQI_chu_li_jun_dui_desc:0 "尽管[SQI.GetLeader]已经取得了最后的胜利，但是这并不意味着一切就此结束了，如今乱贼仍在齐鲁大地上胡作非为，我们的军队内部也并非铁通一块，本就战斗力低下如今更是没眼看，我们必须对其大刀阔斧的改革，建立起一支可堪一用的军队。"
+ SQI_gong_bi_shan_qi_qi:0 "必先利其器"
+ SQI_gong_bi_shan_qi_qi_desc:0 "要打胜仗不仅仅是要看我们士兵的军事素养，俗话说巧妇难为无米之炊，没有趁手的兵器我们的将士就无法发挥出最大的战斗力为此，我们需要制定一套方案，改善我们如今缺枪缺弹的现状。"
+ SQI_da_pao_fang_an:0 "火力便是一切"
+ SQI_da_pao_fang_an_desc:0 " "
+ SQI_ji_dong_cai_shi_wang_dao:0 "机动才是第一位"
+ SQI_ji_dong_cai_shi_wang_dao_desc:0 " "
+ SQI_zhang_wo_hou_qing_zhu_dong:0 "战胜于后勤"
+ SQI_zhang_wo_hou_qing_zhu_dong_desc:0 " "
  SQI_xin_yang_zhi_jun:0 "信仰之军"
  SQI_xin_yang_zhi_jun_desc:0 " "
+ SQI_wei_tian_shi_er_zhan:0 "为天师而战"
+ SQI_wei_tian_shi_er_zhan_desc:0 "士兵将不再听从于军阀之命，在这个时代需要有一个有经验有能力的领导者，即天师，来激发他们的勇气。一个文武兼备的指挥中枢将能有效的利用山东的人力物力实现目的。"
+ SQI_xin_tu_wu_qi:0 "信徒武器上缴"
+ SQI_xin_tu_wu_qi_desc:0 "山东人民为抵御军匪们的袭扰而囤积了一大批武器装备，现在他没了，我们就能让这些潜在的爱国者为救国而上缴武器了。"
+ SQI_zu_zhi_gan_si_dui:0 "组织敢死队"
+ SQI_zu_zhi_gan_si_dui_desc:0 " "
+ SQI_shou_bian_ming_tuan:0 "收编民团"
+ SQI_shou_bian_ming_tuan_desc:0 " "
+ SQI_kuang_re_zho_jun:0 "狂热之军"
+ SQI_kuang_re_zho_jun_desc:0 " "
  SQI_de_shi_jun_dui:0 "德式军队"
  SQI_de_shi_jun_dui_desc:0 " "
  SQI_xin_sho_qi_bing:0 "现代化骑兵部队"
  SQI_xin_sho_qi_bing_desc:0 " "
+ SQI_kuo_zhang_bai_e_jun:0 "扩大白俄营"
+ SQI_kuo_zhang_bai_e_jun_desc:0 " "
+ SQI_ying_xiang_zhu_yi_jiao_yu:0 "爱国主义教育"
+ SQI_ying_xiang_zhu_yi_jiao_yu_desc:0 " "
+ SQI_kan_ke_jun_xun:0 "严苛训练"
+ SQI_kan_ke_jun_xun_desc:0 " "
+ SQI_feng_xin_jun_guo_zhu_yi:0 "奉行军国主义"
+ SQI_feng_xin_jun_guo_zhu_yi_desc:0 " "
+ SQI_jun_guan_fan_xiao:0 "军官返校"
+ SQI_jun_guan_fan_xiao_desc:0 "由于我们的政府缺乏合法性，新一代的官兵得不到机会进入军校深造，我们必须要考虑对外国军事教育方法和内容的吸收，并向这项工作投入资源。"
+ SQI_xue_xin_xing_li_lun:0 "学习新理论"
+ SQI_xue_xin_xing_li_lun_desc:0 " "
+ SQI_gang_tie_zhi_jun:0 "钢铁之军"
+ SQI_gang_tie_zhi_jun_desc:0 " "
+ SQI_xue_rou_chang_Cheng:0 "血肉长城"
+ SQI_xue_rou_chang_Cheng_desc:0 " "
 
  SQI_Turning_Our_Attention_To_Industry:0 "半岛工业振兴"
  SQI_Turning_Our_Attention_To_Industry_desc:0 "虽然山东免于八省联合治理，但是这些年还是有一批厂子破产了。行政部门一直致力于勘探这些空地皮，并且试图引进外资来发展经济。"
