开炮，开炮，开炮！

--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -248,10 +248,13 @@
  SQI_yellow_river_strikes_modifier_desc:0 "洪流泛滥，田禾淹没，人畜漂浮，灾情严重。沿堤灾黎约占30余里，犹逐增加，男女露宿，目击心伤...附近村庄几遭全毁，淹死男女约五百余人，牲畜无算。"
  SQI_jiangsu_shandong_deal_dynamic_modifier:0 "开发江苏"
 
+ SQI_tan_ke:0 "济南坦克制造厂"
+ SQI_tan_ke_mio_desc:0 "坦克生产设计商"
  jinan_arsenal_improved_SQI:0 "步兵装备制造商"
  luda_mining_company:0 "鲁大矿业集团"
  SQI_schantung_bergbaugesellschaft:0 "山东铁路矿业公司"
  seventy_two_cannon_artillery_foundry:0 "七二炮铸造厂"
+ SQI_seventy_two_cannon_artillery_foundry_mio_desc:0 "火炮生产设计商"
  jinan_arsenal:0 "济南兵工厂"
  jinan_arsenal_improved:0 "济南兵工厂"
  jinan_arsenal_mio_desc:0 "步兵装备生产设计商\n§L济南兵工厂兴建于1875年，是一家历史悠久的军工企业。生产机构设机器、火药、枪弹、白药、炼铁、铸铁、轧铜、化铜、木工、工程10所。以枪弹、手榴弹、飞机炸弹引信为主要产品。§!"
@@ -384,6 +387,7 @@
  SQI_jin_kou_de_guo_wu_qi:0 "进口德国武器"
  SQI_jin_kou_de_guo_ka_che:0 "进口德国卡车"
  SQI_jin_kou_de_guo_huo_pao:0 "进口德国火炮"
+ SQI_jin_kou_de_guo_tan_ke:0 "进口德国坦克"
  SQI_yao_qing_de_guo_zhuan_jia:0 "邀请德国工业专家"
  SQI_de_guo_gong_ye_yuan_zu:0 "德国工业援助"
  SQI_gu_li_guo_huo:0 "鼓励国货"
@@ -528,9 +532,9 @@
  SQI_gong_bi_shan_qi_qi:0 "必先利其器"
  SQI_gong_bi_shan_qi_qi_desc:0 "要打胜仗不仅仅是要看我们士兵的军事素养，俗话说巧妇难为无米之炊，没有趁手的兵器我们的将士就无法发挥出最大的战斗力为此，我们需要制定一套方案，改善我们如今缺枪缺弹的现状。"
  SQI_da_pao_fang_an:0 "火力便是一切"
- SQI_da_pao_fang_an_desc:0 " "
+ SQI_da_pao_fang_an_desc:0 "对于战争而言，没有什么比火炮更重要的了，大口径炮火是如何摧毁国民党北伐军的历史还犹在眼前，张宗昌当年能在山东耀武扬威也是多亏了他手中的那一门列车炮。如今我们当然要发展火炮，用炮弹摧毁一切！"
  SQI_ji_dong_cai_shi_wang_dao:0 "机动才是第一位"
- SQI_ji_dong_cai_shi_wang_dao_desc:0 " "
+ SQI_ji_dong_cai_shi_wang_dao_desc:0 "欧战以后德国人一直在寻求新的战术，在同他们的度假军官交谈中我们得知了一种名为坦克的新型武器。这种就像是可移动的炮台，它也许没有那么强大的火力，但是它一定适应更多样的作战环境！"
  SQI_zhang_wo_hou_qing_zhu_dong:0 "战胜于后勤"
  SQI_zhang_wo_hou_qing_zhu_dong_desc:0 " "
  SQI_xin_yang_zhi_jun:0 "信仰之军"
