--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -2406,7 +2406,7 @@
  HNN_lao_dong_huan_yuan_zu:0 "劳动换援助"
  HNN_lao_dong_huan_yuan_zu_desc:0 "相对于其他社会主义国家而言，我们的经济是相对薄弱的，为了换去更高的援助，我们可以适当的派出一些工人去欧洲劳动。"
  HNN_hong_hai_jun:0 "红海军计划"
- HNN_hong_hai_jun_desc:0 "红海军如今可能还算不上令人畏惧，但只要有足够资金投入，美国海军就能震慑全球。所以，让我们投资大建，为了某一天主宰海洋。我们永远不会被遥远大洋彼岸的国家入侵，甚至也许有一天，会由我们这边发起入侵。"
+ HNN_hong_hai_jun_desc:0 "红海军如今可能还算不上令人畏惧，但只要有足够资金投入，我们的海军就能震慑全球。所以，让我们投资大建，为了某一天主宰海洋。我们永远不会被遥远大洋彼岸的国家入侵，甚至也许有一天，会由我们这边发起入侵。"
  HNN_kong_zhong_you_si:0 "空中优势"
  HNN_kong_zhong_you_si_desc:0 "在未来的战争中掌控制空权以及确保战场控制就能够取得一场战争的绝对优势。只要控制了天空，我们就可以对加固据点和城市等倾泻火力。没有人能阻挡来自天空的死神。"
  HNN_san_xian_gong_cheng:0 "三线工程"
