--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -206,6 +206,11 @@
  SQI_zi_ji_zhi_zu:0 "自给自足"
  SQI_chantiers_de_la_jeunesse:0 "人力资源"
  SQI_chantiers_de_la_jeunesse3:0 "稳步工业化"
+ SQI_german_garrison:0 "向德意志学习"
+ SQI_german_garrison4:0 "钢铁之军"
+ SQI_invest_arms_industry:0 "现代化骑兵"
+ SQI_xin_yang_army:0 "信仰之军"
+ SQI_xin_yang_army4:0 "血肉长城"
  SQI_Yiguandao_revolt:0 "一贯道暴乱"
  SQI_Yiguandao_revolt_desc:0 "如果天师去世，那么一贯道就会由其副手和次级管理者运营。目前一贯道正让信徒们焚烧财产，并移居到石窟里，以预备大劫的到来。因此我们现在还不能从这批人身上捞到东西。"
  SQI_Peasant_revolt:0 "农民暴乱"
@@ -536,23 +541,23 @@
  SQI_ji_dong_cai_shi_wang_dao:0 "机动才是第一位"
  SQI_ji_dong_cai_shi_wang_dao_desc:0 "欧战以后德国人一直在寻求新的战术，在同他们的度假军官交谈中我们得知了一种名为坦克的新型武器。这种就像是可移动的炮台，它也许没有那么强大的火力，但是它一定适应更多样的作战环境！"
  SQI_zhang_wo_hou_qing_zhu_dong:0 "战胜于后勤"
- SQI_zhang_wo_hou_qing_zhu_dong_desc:0 " "
+ SQI_zhang_wo_hou_qing_zhu_dong_desc:0 "人是铁，饭是钢，行军打仗真正要比起来就要看谁的后勤更能够及时给前线部队提供武器弹药和粮食。我们的卡车每比敌人快一分，战胜敌人的概率就要高一分。"
  SQI_xin_yang_zhi_jun:0 "信仰之军"
- SQI_xin_yang_zhi_jun_desc:0 " "
+ SQI_xin_yang_zhi_jun_desc:0 "山东的新军队将完全按照一贯道的教义来打造，他们各个都将熟读教经，每一个人都将明白张真人是神仙下凡，只有张真人能将他们从凡世的苦海中带离出去，去到那西天极乐世界享受无上荣光。"
  SQI_wei_tian_shi_er_zhan:0 "为天师而战"
  SQI_wei_tian_shi_er_zhan_desc:0 "士兵将不再听从于军阀之命，在这个时代需要有一个有经验有能力的领导者，即天师，来激发他们的勇气。一个文武兼备的指挥中枢将能有效的利用山东的人力物力实现目的。"
  SQI_xin_tu_wu_qi:0 "信徒武器上缴"
- SQI_xin_tu_wu_qi_desc:0 "山东人民为抵御军匪们的袭扰而囤积了一大批武器装备，现在他没了，我们就能让这些潜在的爱国者为救国而上缴武器了。"
+ SQI_xin_tu_wu_qi_desc:0 "山东人民为抵御军匪们的袭扰而囤积了一大批武器装备，现在张天师主政了，时代变了，这些潜在的爱国者也时候为救国上缴武器他们的武器了。"
  SQI_zu_zhi_gan_si_dui:0 "组织敢死队"
- SQI_zu_zhi_gan_si_dui_desc:0 " "
+ SQI_zu_zhi_gan_si_dui_desc:0 "悍不畏死，以身报国，我们没有最精良的武器，也没有最先进的战术，但是我们又一颗最炽热的拳拳报国之心，我以我血荐轩辕。"
  SQI_shou_bian_ming_tuan:0 "收编民团"
- SQI_shou_bian_ming_tuan_desc:0 " "
+ SQI_shou_bian_ming_tuan_desc:0 "红枪会、大刀会...这些农民武装都是爱国，他们都是我们最忠诚的战士，所以我们不能就这么放任他们在外自由生长，必须全部收编到我们的军队中进行统一管理，这样才能发挥出最大的价值。"
  SQI_kuang_re_zho_jun:0 "狂热之军"
- SQI_kuang_re_zho_jun_desc:0 " "
+ SQI_kuang_re_zho_jun_desc:0 "根据过去新兵相对于其上级所表现出的敢死勇气所表明，我们应该训练那些狂热的战士们，我们要从年轻士兵之中严挑细选，对其进行训练，并使其永不退缩，这样才能使我们迅速的获得胜利。"
  SQI_de_shi_jun_dui:0 "德式军队"
- SQI_de_shi_jun_dui_desc:0 " "
+ SQI_de_shi_jun_dui_desc:0 "德意志是这个世界上最强大的国家，有着最强大的军队，既然我们想要崛起，那么我们就应该循着德意志的步伐去建立一支全新的军队！"
  SQI_xin_sho_qi_bing:0 "现代化骑兵部队"
- SQI_xin_sho_qi_bing_desc:0 " "
+ SQI_xin_sho_qi_bing_desc:0 "机动部队对于战争而言是必不可少的，但是旧式的骑兵已经不能再适应当下这个"
  SQI_kuo_zhang_bai_e_jun:0 "扩大白俄营"
  SQI_kuo_zhang_bai_e_jun_desc:0 " "
  SQI_ying_xiang_zhu_yi_jiao_yu:0 "爱国主义教育"
