--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -1432,6 +1432,9 @@
  YUN_align_with_sichuan_npa:0 "向四川看齐"
  YUN_align_with_fengtian:0 "向奉天看齐"
  YUN_Integrate_Faction_Members:0 "合并[From.GetCliqueShortName]"
+ YUN:0 "云南"
+ YUN_ADJ:0 "云南"
+ YUN_DEF:0 "云南"
  YUN_NRA_totalist:0 "昆明国民政府"
  YUN_NRA_totalist_ADJ:0 "国民党左派"
  YUN_NRA_totalist_DEF:0 "昆明国民政府"
