--- a/localisation/QD_military_industrial_organization_l_simp_chinese.yml
+++ b/localisation/QD_military_industrial_organization_l_simp_chinese.yml
@@ -59,6 +59,7 @@
  tstz_upgrade_resetable_res_tt: "§g可重设特质§H$tstz_upgrade_2_4$§!的效果将翻倍§!"
  SQI_seventy_upgrade_2: "延长炮管寿命"
  SQI_seventy_upgrade_1_3: "快速组装"
+ SQI_si_fang_upgrade_1_2_5: "扩大材料回收"
  SQI_seventy_upgrade_upgrade_2_2: "专为防空设计"
  SQI_seventy_upgrade_upgrade_2_3: "专为装甲设计"
  SQI_si_fang_trait_cic_tt: "§g每有一级§H军工机构§!规模，通过研究获取的£civ_factory_output §H经济产能盈余§!将额外增加§G+250§!§!"
