--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -88,3 +88,7 @@
  COUNTRY_integrated_governorate: "$NONIDEOLOGY$"
  COUNTRY_integrated_governorate_DEF: "$NONIDEOLOGYDEF$"
  cannot_change_autonomy_manually: "§R无法手动改变自治等级§!"
+
+ MON:0 "蒙古"
+ MON_ADJ:0 "蒙古"
+ MON_DEF:0 "蒙古"
